如何创建一个npm包

--- a/source/_posts/20200204 - 如何创建一个npm包.md
+++ b/source/_posts/20200204 - 如何创建一个npm包.md
@@ -1,9 +1,9 @@
 ---
 title: 如何创建一个npm包
 tags:
-  - writing
+  - npm
 categories:
-  - essay
+  - 工具
 comments: false
 description: 如何创建一个npm包
 uuid: 5f09a930-4717-11ea-8128-ab3daccd577f
