--- a/source/_posts/20210203 - 什么读书方法效果最好？.md
+++ b/source/_posts/20210203 - 什么读书方法效果最好？.md
@@ -14,4 +14,4 @@ description:
 
 苏轼解释，自己读《汉书》一共手抄了三遍，第一遍每段抄三个字作为标记，第二遍减少为抄两个字，第三遍只需抄一个字就行。苏轼拿来所抄书稿给朋友过目，并说自己可以对照这些单字，背诵出对应的段落。朋友尝试发问几次，发现苏轼背诵得丝毫不差，对他佩服得五体投地。
 
-> ——摘自[https://zhuanlan.zhihu.com/p/58379670](https://zhuanlan.zhihu.com/p/58379670)
+> ——摘自[什么读书方法效果最好？](https://zhuanlan.zhihu.com/p/58379670)
