--- a/source/_posts/20191007 - gcache-源码分析.md
+++ b/source/_posts/20191007 - gcache-源码分析.md
@@ -867,8 +867,9 @@ func (c *ARC) replace(key interface{}) {
 > [缓存机制Cache ARC算法（一）](https://blog.csdn.net/WSKINGS/article/details/46416451)  
 > [gcache 源码分析](http://mckee.cn/golang/gcache)    
 > [阿里P8架构师谈：详解Memcached、Redis等缓存的特征、原理、应用](https://youzhixueyuan.com/explain-the-principles-of-memcached-and-redis.html)  
-> [一文深入了解：分布式系统中的缓存架构](https://juejin.im/entry/5b59615a5188251af86bf5c9)    
-
+> [一文深入了解：分布式系统中的缓存架构](https://juejin.im/entry/5b59615a5188251af86bf5c9)      
+> [Ristretto is a fast, concurrent cache library built with a focus on performance and correctness.](https://github.com/dgraph-io/ristretto)   
+> [Caffeine Cache-高性能Java本地缓存组件 ](https://www.cnblogs.com/rickiyang/p/11074158.html)
 
 ---
 <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
