--- a/source/_drafts/消息队列（订阅发布系统）.md
+++ b/source/_drafts/消息队列（订阅发布系统）.md
@@ -27,7 +27,7 @@ description: 消息队列
 > [消息队列的两种模式](http://blog.csdn.net/heyutao007/article/details/50131089)
 
 ---
-![20200131220947.png](https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20200131220947.png)
+![20200131220947.png](/images/20200131220947.png)
 
 <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
 <script src="http://yandex.st/highlightjs/6.1/highlight.min.js"></script>
