--- a/source/_posts/20200204 - 如何创建一个npm包.md
+++ b/source/_posts/20200204 - 如何创建一个npm包.md
@@ -105,7 +105,7 @@ grimoire-tool             | 魔法书工具包           | =liangyuanzheng | 202
 
 ---
 
-![20200131220947.png](https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20200131220947.png)
+![20200131220947.png](/images/20200131220947.png)
 
 <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
 <script src="http://yandex.st/highlightjs/6.1/highlight.min.js"></script>
