--- a/source/_posts/20180209 - 威尔逊得分.md
+++ b/source/_posts/20180209 - 威尔逊得分.md
@@ -79,7 +79,7 @@ description:
 
 下面这两张图可以比较直观地显示威尔逊得分算法的几个重要特性。
 
-![20190905204359.png](https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20190905204359.png)
+![20190905204359.png](/images/20190905204359.png)
 
 > 为方便讨论，依次称左图中 up-vote, down-vote, score 对应的轴为 x,y,z 轴。右图为左图的等高线图。
 
