--- a/source/_posts/20191027 - 12306是如何支撑百万qps的？.md
+++ b/source/_posts/20191027 - 12306是如何支撑百万qps的？.md
@@ -153,7 +153,7 @@ https://www.kancloud.cn/digest/understandingnginx/202607
 这三个阶段的先后顺序该怎么分配才更加合理呢？我们来分析一下：
 
 ### 下单减库存
-<img src="https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20191027222822.png" width="80%">
+<img src="/images/20191027222822.png" width="80%">
 
 当用户并发请求到达服务端时，首先创建订单，然后扣除库存，等待用户支付。
 
@@ -195,7 +195,7 @@ https://www.kancloud.cn/digest/understandingnginx/202607
 我们把一定的库存量分配到本地机器，直接在内存中减库存，然后按照之前的逻辑异步创建订单。
 
 改进过之后的单机系统是这样的：
-<img src="https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20191027224941.png" width="80%">
+<img src="/images/20191027224941.png" width="80%">
 
 这样就避免了对数据库频繁的 IO 操作，只在内存中做运算，极大的提高了单机抗并发的能力。
 
@@ -206,7 +206,7 @@ https://www.kancloud.cn/digest/understandingnginx/202607
 上面我们提到了 Nginx 的加权均衡策略，我们不妨假设将 100W 的用户请求量平均均衡到 100 台服务器上，这样单机所承受的并发量就小了很多。
 
 然后我们每台机器本地库存 100 张火车票，100 台服务器上的总库存还是 1 万，这样保证了库存订单不超卖，下面是我们描述的集群架构：
-<img src="https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20191027225154.png" width="80%">
+<img src="/images/20191027225154.png" width="80%">
 
 问题接踵而至，在高并发情况下，现在我们还无法保证系统的高可用，假如这 100 台服务器上有两三台机器因为扛不住并发的流量或者其他的原因宕机了。那么这些服务器上的订单就卖不出去了，这就造成了订单的少卖。
 
@@ -215,7 +215,7 @@ https://www.kancloud.cn/digest/understandingnginx/202607
 有了远程统一减库存的操作，我们就可以根据机器负载情况，为每台机器分配一些多余的“Buffer 库存”用来防止机器中有机器宕机的情况。
 
 我们结合下面架构图具体分析一下：
-<img src="https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20191027225403.png" width="80%">
+<img src="/images/20191027225403.png" width="80%">
 
 我们采用 Redis 存储统一库存，因为 Redis 的性能非常高，号称单机 QPS 能抗 10W 的并发。
 
