--- a/source/_posts/20191003 - Go-开发者路线图.md
+++ b/source/_posts/20191003 - Go-开发者路线图.md
@@ -28,7 +28,7 @@ description:
 
 ## 路线图
 
-![20191003165741.png](https://raw.githubusercontent.com/LeungGeorge/assets/master/images/20191003165741.png)
+![20191003165741.png](/images/20191003165741.png)
 
 ## 资源
 
