--- a/source/_posts/20221210 - 《西厢记》摘录.md
+++ b/source/_posts/20221210 - 《西厢记》摘录.md
@@ -5,7 +5,7 @@ tags:
   - writing
 categories:
   - essay
-comments: false
+comments: true
 date: 2022-12-10 16:52:18
 description: 碧云天，黄花地，西风紧。北雁南飞。晓来谁染霜林醉？总是离人泪。
 ---
