--- a/source/_posts/20170423 - 换电脑了hexo博客怎么办？.md
+++ b/source/_posts/20170423 - 换电脑了hexo博客怎么办？.md
@@ -7,7 +7,7 @@ tags:
   - blog
 categories: 
   - 工具
-comments: false
+comments: true
 description: 换电脑了hexo博客怎么办？本文介绍了换机后的搭建流程。
 date: 2017-04-23 11:48:24
 ---
