--- a/source/_posts/20190915 - Golang-新手可能会踩的坑.md
+++ b/source/_posts/20190915 - Golang-新手可能会踩的坑.md
@@ -6,7 +6,7 @@ tags:
   - golang
 categories:
   - 转载
-comments: false
+comments: true
 date: 2019-09-15 20:40:09
 description: Go 是一门简单有趣的编程语言，与其他语言一样，在使用时不免会遇到很多坑，不过它们大多不是 Go 本身的设计缺陷。如果你刚从其他语言转到 Go，那这篇文章里的坑多半会踩到。本文是从 github 上摘录的一篇文章（不记得是哪位兄弟翻译的了，后续遇到了再补上）
 ---
