--- a/source/_posts/20191003 - TCP-与-UDP.md
+++ b/source/_posts/20191003 - TCP-与-UDP.md
@@ -6,7 +6,7 @@ tags:
   - udp
 categories:
   - 网络
-comments: false
+comments: true
 date: 2019-10-03 09:49:58
 description: TCP、UDP的一些特型的读书笔记。——摘自《图解TCP/IP》
 ---
