--- a/source/_posts/20191007 - gcache-源码分析.md
+++ b/source/_posts/20191007 - gcache-源码分析.md
@@ -6,7 +6,7 @@ tags:
   - gcache
 categories:
   - golang
-comments: false
+comments: true
 description: 首先介绍 FIFO 、LRU、LFU 三种缓存算法的特征、基本思想，然后再从源码解读 gcache 的实现。
 date: 2019-10-07 15:02:00
 ---
