--- a/source/_posts/20191027 - 12306是如何支撑百万qps的？.md
+++ b/source/_posts/20191027 - 12306是如何支撑百万qps的？.md
@@ -5,7 +5,7 @@ tags:
   - 高并发
 categories:
   - 转载
-comments: false
+comments: true
 description: >-
   本文介绍模拟了一下单机如何优化到高性能，集群如何避免单点故障，保证订单不超卖、不少卖的一些策略，完整的订单系统还有订单进度的查看，每台服务器上都有一个任务，定时的从总库存同步余票和库存信息展示给用户，还有用户在订单有效期内不支付，释放订单，补充到库存等等。
 date: 2019-10-27 12:48:32
