--- a/source/_posts/20191102 - 你应该知道的伟大程序架构.md
+++ b/source/_posts/20191102 - 你应该知道的伟大程序架构.md
@@ -6,7 +6,7 @@ tags:
   - 架构
 categories:
   - 转载
-comments: false
+comments: true
 description: 重要的是要知道最好的几种可能的架构，这样您可以轻松地创建一个适合所有要求的优化方案。
 date: 2019-11-02 21:59:06
 ---
