--- a/source/_posts/20200204 - 如何创建一个npm包.md
+++ b/source/_posts/20200204 - 如何创建一个npm包.md
@@ -3,7 +3,7 @@ tags:
   - npm
 categories:
   - 工具
-comments: false
+comments: true
 description: 如何创建一个npm包
 uuid: 5f09a930-4717-11ea-8128-ab3daccd577f
 date: 2020-02-04 14:58:00
