--- a/source/_posts/20221208 - 代码评审.md
+++ b/source/_posts/20221208 - 代码评审.md
@@ -5,7 +5,7 @@ tags:
   - Google 软件工程
 categories:
   - 软件工程
-comments: false
+comments: true
 author: 七点一刻
 date: 2022-12-08 10:18:00
 description:
