--- a/source/_posts/20170709 - 执行hexo时的一些报错处理.md
+++ b/source/_posts/20170709 - 执行hexo时的一些报错处理.md
@@ -6,7 +6,7 @@ tags:
   - hexo
 categories:
   - 工具
-comments: false
+comments: true
 description: 执行hexo时的一些报错处理,罗列一下，以备后用。
 date: 2017-07-09 11:49:15
 ---
