--- a/source/_posts/20170717 - 推荐系统初探.md
+++ b/source/_posts/20170717 - 推荐系统初探.md
@@ -5,7 +5,7 @@ tags:
   - 推荐系统
 categories:
   - essay
-comments: false
+comments: true
 description: 推荐算法通过利用用户的一些行为，通过一些数学算法，推测出用户可能喜欢的东西，筛选合适的数据集，推荐给用户。
 date: 2017-07-17 18:15:32
 ---
