--- a/source/_posts/20170815 - 线上数据库使用规范.md
+++ b/source/_posts/20170815 - 线上数据库使用规范.md
@@ -6,7 +6,7 @@ tags:
   - 规范
 categories:
   - mysql
-comments: false
+comments: true
 date: 2017-08-15 21:32:00
 description: 本文包括数据库的一些命名规范，库、表约束规范，字段定义规范，索引规范，SQL涉及规范等。
 
