--- a/source/_posts/20171112 - 使用scrapy抓取代理ip实例.md
+++ b/source/_posts/20171112 - 使用scrapy抓取代理ip实例.md
@@ -6,7 +6,7 @@ tags:
   - scrapy
 categories:
   - python
-comments: false
+comments: true
 date: 2017-11-12 23:18:36
 description: 本文主要介绍了使用scrapy框架实现抓取代理ip的功能。
 
