--- a/source/_posts/20221225 - 京剧经典节目.md
+++ b/source/_posts/20221225 - 京剧经典节目.md
@@ -2,9 +2,10 @@
 uuid: fc0dafd0-8457-11ed-81a3-3b397bb2916b
 title: 京剧经典节目
 tags:
-  - writing
+  - 现代经典
+  - 传统名段
 categories:
-  - essay
+  - 京剧
 comments: true
 keywords: 京剧经典节目
 date: 2022-12-25 21:28:14
