--- a/source/_posts/20230107 - 如何写读书笔记.md
+++ b/source/_posts/20230107 - 如何写读书笔记.md
@@ -32,15 +32,11 @@ description:
 
   6、简缩式。用缩写的方法，把故事内容简缩成一段短文。
 
-  7、探索式。主要目的是为了有计划地探索阅读中遇到的各种疑难，先边读边记，再分别探索。其内容可以列成这样几项：书名或文章题目、疑难问题，准
-
-备怎样探索。
+  7、探索式。主要目的是为了有计划地探索阅读中遇到的各种疑难，先边读边记，再分别探索。其内容可以列成这样几项：书名或文章题目、疑难问题，准备怎样探索。
 
   8、介绍式。读了文章以后，把它的主要内容、具体收获，一一有条理地加以叙述。
 
-  9、批注式。如果书是自己的，可以边读边思边在文章的上下左右空白处进行批注。批注的内容可以抒发感想，提出质疑，也可以叙述教益、个人见解及其
-
-他与书中内容有关的知识等。
+  9、批注式。如果书是自己的，可以边读边思边在文章的上下左右空白处进行批注。批注的内容可以抒发感想，提出质疑，也可以叙述教益、个人见解及其他与书中内容有关的知识等。
 
  
 
