--- a/source/_posts/20230107 - 阅读与写作讲义.md
+++ b/source/_posts/20230107 - 阅读与写作讲义.md
@@ -1,12 +1,12 @@
 ---
 uuid: 20eb0370-8e3f-11ed-809c-bdcf16472666
-title: 《吴军阅读与写作讲义》读书笔记
+title: 阅读与写作讲义
 tags:
   - writing
 categories:
   - 读书笔记
 comments: true
-keywords: 《吴军阅读与写作讲义》读书笔记
+keywords: 阅读与写作讲义
 date: 2023-01-07 11:55:30
 description: 
 ---
