--- a/source/_posts/20170701 - 第一次使用VS Code时你应该知道的一切配置.md
+++ b/source/_posts/20170701 - 第一次使用VS Code时你应该知道的一切配置.md
@@ -2,9 +2,9 @@
 uuid: aee4c5b0-7901-11ed-a8da-2b4ac18f9d7d
 title: 第一次使用VS Code时你应该知道的一切配置
 tags:
-  - writing
-categories:
   - 转载
+categories:
+  - writing
 comments: true
 keywords: 第一次使用VS Code时你应该知道的一切配置
 date: 2017-07-01 11:12:45
@@ -17,9 +17,8 @@ description:
 
 ## 前言
 
-> 文章标题：《第一次使用 VS Code 时你应该知道的一切配置》。本文的最新内容，更新于 2021-10-09。大家完全不用担心这篇文章会过时，因为随着 VS Code 的版本更新和插件更新，本文也会随之更新。
+> 文章标题：《第一次使用 VS Code 时你应该知道的一切配置》。本文的最新内容，更新于 2021-10-09。大家完全不用担心这篇文章会过时，因为随着 VS Code 的版本更新和插件更新，本文也会随之更新。本文的最新内容，也会在[GitHub](https://github.com/qianguyihao/Web/blob/master/00-前端工具/01-VS Code的使用.md)上同步更新，欢迎 star。
 >
-> 本文的最新内容，也会在 [GitHub](https://github.com/qianguyihao/Web/blob/master/00-前端工具/01-VS Code的使用.md) 上同步更新，欢迎 star。
 
 VS Code 软件实在是太酷、太好用了，越来越多的新生代互联网青年正在使用它。
 
