--- a/source/_posts/20230305-AI-应用.md
+++ b/source/_posts/20230305-AI-应用.md
@@ -14,9 +14,7 @@ description:
 
 # 图灵测试
 
-1950年，图灵发表一篇名为《计算机器与智能》的论文，被誉为人工智能科学的开山之作。
-
-文中提出了图灵测试，详细定义并解释了人工智能及其研究目的，发展方向。
+1950年，图灵发表一篇名为《计算机器与智能》的论文，被誉为人工智能科学的开山之作。文中提出了图灵测试。
 
 <img src="local.assets/images/image-20230305164030070.png" alt="image-20230305164030070" style="zoom:50%;" />
 
@@ -36,11 +34,9 @@ description:
 
 ChatGPT（Chat Generative Pre-Trained Transformer）是由OpenAI开发的人工智能聊天机器人程序，其基于GPT-3.5大模型，能够完成相对复杂的语言处理任务，包括人机对话、自动文本生成、自动摘要、编写代码等，在2022年11月推出，上线两个月后用户数量即达到1亿规模，在全球范围内掀起又一轮AI热潮。
 
-<img src="local.assets/images/image-20230305082452066.png" alt="image-20230305082452066" style="zoom:33%;" />
-
-<img src="local.assets/images/image-20230305110028321.png" alt="image-20230305110028321" style="zoom:33%;" />
-
 <img src="local.assets/images/image-20230305110452487.png" alt="image-20230305110452487" style="zoom:33%;" />
+
+<img src="local.assets/images/image-20230305110028321.png" alt="image-20230305110028321" style="zoom: 33%;" />
 
 ## 令人惊艳的能力
 
