--- a/source/_posts/20221225 - 京剧经典节目.md
+++ b/source/_posts/20221225 - 京剧经典节目.md
@@ -161,9 +161,9 @@ description:
 
 想当初，
 
-[老子](https://baike.baidu.com/item/老子?fromModule=lemma_inlink)的队伍才开张，
+老子的队伍才开张，
 
-[拢共](https://baike.baidu.com/item/拢共?fromModule=lemma_inlink)才有十几个人，七八条枪。
+拢共才有十几个人，七八条枪。
 
 遇“皇军”追得我，晕头转向，
 
