--- a/source/_posts/酱牛肉.md
+++ b/source/_posts/酱牛肉.md
@@ -8,6 +8,8 @@ share: "true"
 
 # 1 配方
 
+![](assets/images/Pasted%20image%2020240625191347.png)
+
 # 2 参考文献
 
 https://www.bilibili.com/video/BV1VW41147Fh/?spm_id_from=333.337.search-card.all.click&vd_source=e18f1800ff1f15ec2dc1aebc4a75f802
