PUSH NOTE : 酱牛肉.md

--- a/source/_posts/酱牛肉.md
+++ b/source/_posts/酱牛肉.md
@@ -1,5 +1,4 @@
 ---
-uuid: d060d040-32e5-11ef-b2bb-a7256fdd5005
 tags:
   - 随笔
   - 美食
@@ -7,10 +6,12 @@ title: 酱牛肉
 share: "true"
 ---
 
-# 1 配方
+# 配方
 
 ![](https://raw.githubusercontent.com/LeungGeorge/assets/master/images/2022/Pasted%20image%2020240625191347.png)
 
-# 2 参考文献
+# 参考文献
+
+[清纯牛肉](2%20Aera/健康/美食/清纯牛肉.md)
 
 https://www.bilibili.com/video/BV1VW41147Fh/?spm_id_from=333.337.search-card.all.click&vd_source=e18f1800ff1f15ec2dc1aebc4a75f802
