PUSH NOTE : 20240628 《小池》杨万里 宋.md

--- a/source/_posts/《小池》杨万里 宋.md
+++ b/source/_posts/《小池》杨万里 宋.md
@@ -1,11 +1,11 @@
 ---
-uuid: 4fb12650-4598-11ef-8cc4-478b7abac0c5
 tags:
   - 随笔
   - note
   - 诗词
+  - blog
 categories:
-  - essay
+  - 诗词歌赋
 share: "true"
 title: 《小池》杨万里 宋
 ---
