--- a/source/_posts/《后出师表》诸葛亮.md
+++ b/source/_posts/《后出师表》诸葛亮.md
@@ -7,6 +7,7 @@ title: 《后出师表》诸葛亮
 share: "true"
 categories:
   - 诗词歌赋
+date: 2024-03-29
 ---
 
 先帝虑汉、贼不两立，王业不偏安，故讬臣以讨贼也。以先帝之明，量臣之才，故知臣伐贼才弱敌强也；然不伐贼，王业亦亡，惟坐待亡，孰与伐之？是故讬臣而弗疑也。
