PUSH NOTE : 古文观止.md

--- a/source/_posts/古文观止.md
+++ b/source/_posts/古文观止.md
@@ -2,11 +2,13 @@
 tags:
   - 随笔
   - 古文
+  - blog
 number headings: auto, first-level 1, max 6, 1.1
 share: "true"
 categories:
   - 诗词歌赋
 title: 古文观止
+date: 2024-07-20
 ---
 
 # 1 古文观止
