PUSH NOTE : 什么是字幕、有哪些格式？.md

--- a/source/_posts/什么是字幕、有哪些格式？.md
+++ b/source/_posts/什么是字幕、有哪些格式？.md
@@ -9,6 +9,7 @@ tags:
 description: 最近做的工作和字幕生成有关，顺手整理了一些字幕相关的资料。本文简单介绍了字幕的基本知识和一些常见的字幕格式，一来备忘，二来共同学习。
 share: "true"
 title: 什么是字幕、有哪些格式？
+date: 2024-03-07
 ---
 最近做的工作和字幕生成有关，顺手整理了一些字幕相关的资料。本文简单介绍了字幕的基本知识和一些常见的字幕格式，一来备忘，二来共同学习。
 # 1 什么是字幕
