--- a/source/_posts/《活着》摘录.md
+++ b/source/_posts/《活着》摘录.md
@@ -1,9 +1,13 @@
 ---
 tags:
   - 随笔
-  - TODO
+  - 笔记
+  - blog
 share: "true"
 title: 《活着》摘录
+date: 2023-03-03
+categories:
+  - 读书笔记
 ---
 
 # 《活着》摘录
