--- a/source/_posts/20221208 - 代码评审.md
+++ b/source/_posts/20221208 - 代码评审.md
@@ -21,7 +21,7 @@ description:
 
 谷歌的一个典型代码评审流程包括以下步骤：
 
-![image-20221208105140450](source/assets/images/image-20221208105106314%202.png)
+![image-20221208105140450](source/assets/images/image-202212081051063142.png)
 
 ## 代码评审的好处
 
