--- a/source/_posts/20221210 - 同时配置多个 git 账号.md
+++ b/source/_posts/20221210 - 同时配置多个 git 账号.md
@@ -47,7 +47,7 @@ Hi LeungGeorge! You've successfully authenticated, but GitHub does not provide s
 ```
 
 ---
-![image-20221210105213725](source/assets/images/image-20221210105213725%202.png)
+![image-20221210105213725](source/assets/images/image-202212101052137252.png)
 
 <link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
 
