--- a/source/_posts/《资治通鉴》.md
+++ b/source/_posts/《资治通鉴》.md
@@ -12,15 +12,15 @@ title: 《资治通鉴》
 date: 2024-07-23
 ---
 
-# 1 史记
+# 史记
 
 编年史，年经事纬的巨著。
 
-# 2 序
+# 序
 
 [博而得其要，简而周于事](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=7&selection=186,0,189,0)
 
-# 3 [卷第一](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=7&selection=274,0,274,3)
+# [卷第一](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=7&selection=274,0,274,3)
 
 惎（jì），毒也，音其冀翻。
 
@@ -52,16 +52,16 @@ date: 2024-07-23
 >
 > > 智伯又求蔡、皋狼之地于赵襄子
 
-# 4 附录
+# 附录
 
-## 4.1 在看《资治通鉴》时，发现用于解释的小字部分有“治，直之翻”之类的字眼，请问这个“翻”是什么意思呀？
+## 在看《资治通鉴》时，发现用于解释的小字部分有“治，直之翻”之类的字眼，请问这个“翻”是什么意思呀？
 
 即 反切。古时的注音方法。
 唐以前人们祇称某某反，唐代人们忌称“反”而改称“切”，也有叫“翻”的，後人合称反切。反切，套成现代术语，基本方法是取前一字的声母和後一字的韵母与声调，二者相拼，就得到了一个新的读音。但知道了这些祇能解决一部分反切的拼读，而不是全部。楼主所举就有一些无法顺利拼读。还有一些专门知识要铺垫纔能全部解决。
 
 还有“扶问翻”，“他综翻”，“户计翻”，“直之翻”，还有“直吏翻”等好多的。你都能理解了。
 
-# 5 参考文献
+# 参考文献
 
 1. [资治通鉴（胡三省注）%20.pdf](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf)
 2. [20240405 资治通鉴 谥法](1%20Project/book/资治通鉴/20240405%20资治通鉴%20谥法.md)
