PUSH NOTE : 《夜雨寄北》李商隐 唐.md

--- a/source/_posts/《夜雨寄北》李商隐 唐.md
+++ b/source/_posts/《夜雨寄北》李商隐 唐.md
@@ -1,5 +1,4 @@
 ---
-uuid: d2b21564-4740-11ef-8b22-6947308a868e
 tags:
   - 随笔
   - note
@@ -9,6 +8,7 @@ categories:
   - 诗词歌赋
 title: 《夜雨寄北》李商隐 唐
 share: "true"
+date: 2024-07-20
 ---
 
 [夜雨寄北](https://baike.baidu.com/item/%E5%A4%9C%E9%9B%A8%E5%AF%84%E5%8C%97/158693)
@@ -17,7 +17,7 @@ share: "true"
 君问归期未有期，巴山夜雨涨秋池。
 何当共剪西窗烛，却话巴山夜雨时。
 
-刘震云在一次采访中提到过这首诗。这首诗有三个结构：现在时，将来时，过去时。
+这首诗有三个结构：现在时，将来时，过去时。
 以回答的口吻，叙述今天的天气。
 畅想未来相聚时，与你讲讲今晚巴山的这场大雨。
 但是，这时他的妻子已经去世了。
