--- a/source/_posts/《小池》杨万里 宋.md
+++ b/source/_posts/《小池》杨万里 宋.md
@@ -1,5 +1,4 @@
 ---
-uuid: d2b21565-4740-11ef-8b22-6947308a868e
 tags:
   - 随笔
   - note
@@ -9,6 +8,7 @@ categories:
   - 诗词歌赋
 share: "true"
 title: 《小池》杨万里 宋
+date: 2024-06-28
 ---
 
 《小池》
