PUSH NOTE : 20240405 资治通鉴 谥法.md

--- a/source/_posts/资治通鉴 谥法.md
+++ b/source/_posts/资治通鉴 谥法.md
@@ -1,5 +1,4 @@
 ---
-uuid: 197160f0-4a4e-11ef-9c2b-c5805576b3ea
 tags:
   - 随笔
   - note
@@ -47,3 +46,5 @@ jìng 释义 1.妆饰；打扮。2.美丽；艳丽。
 [昭襄王](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=89&selection=73,0,73,3)：昭德有劳日昭；辟地有德曰襄。以沈约谧法言之，则昭襄复谥也。
 
 [孝惠皇帝](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=184&selection=318,0,318,4)：应劭曰：礼谥法：柔质慈民曰惠。师古曰：孝子善 述人之志，故汉家之谥，自惠帝以下皆称孝也。
+
+安王：好和不争曰安。
