PUSH NOTE : 《资治通鉴》.md

--- a/source/_posts/《资治通鉴》.md
+++ b/source/_posts/《资治通鉴》.md
@@ -1,5 +1,4 @@
 ---
-uuid: 197160ef-4a4e-11ef-9c2b-c5805576b3ea
 tags:
   - 随笔
   - 笔记
@@ -47,11 +46,15 @@ date: 2024-07-23
 
 [至于季氏之于鲁， 田常之于齐，白公之于楚，智伯之于晋，其势皆足以逐君而自为，然而卒不敢者， 岂其力不足而心不忍哉，乃畏奸名犯分而天下共诛之也。](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=9&selection=209,32,287,1)
 
-[将欲败之，必姑辅之。 将欲取之，必姑与之。](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=11&selection=191,1,197,10)
+[将欲败之，必姑辅之。 将欲取之，必姑与之。](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=11&selection=191,1,197,10)将欲取之，必先予之。
+
 
 > [!PDF|red] [资治通鉴（胡三省注）, p.11](1%20Project/book/资治通鉴/资料/资治通鉴（胡三省注）.pdf#page=11&selection=214,0,214,14&color=red)
 >
 > > 智伯又求蔡、皋狼之地于赵襄子
+
+
+
 
 # 附录
 
