PUSH NOTE : 20230215 - 了凡四训.md

--- a/source/_posts/20230215 - 了凡四训.md
+++ b/source/_posts/20230215 - 了凡四训.md
@@ -8,7 +8,8 @@ categories:
 comments: true
 keywords: 了凡四训
 date: 2023-02-15 09:55:14
-description:
+description: 
+share: "true"
 ---
 
 <!--more-->
@@ -27,8 +28,6 @@ description:
 
 > 转自[《了凡四训》](http://liaofansixun.com/)
 
-
-
-
 ---
-![20200131220947.png](source/assets/images/leunggeorge.github.io-image-9o2i34.png)
+
+![20200131220947.png](assets/images/leunggeorge.github.io-image-9o2i34.png)
