PUSH NOTE : 王维·唐代.md

--- a/王维·唐代.md
+++ b/王维·唐代.md
@@ -11,5 +11,5 @@ categories:
 
 王维不仅参禅悟理，学庄信道，还精通诗、书、画、音乐等。以诗名盛于开元、天宝年间，尤长[五言](https://baike.baidu.com/item/%E4%BA%94%E8%A8%80/4149656?fromModule=lemma_inlink)。其诗多咏山水田园，与[孟浩然](https://baike.baidu.com/item/%E5%AD%9F%E6%B5%A9%E7%84%B6/28158?fromModule=lemma_inlink)合称“[王孟](https://baike.baidu.com/item/%E7%8E%8B%E5%AD%9F/16233881?fromModule=lemma_inlink)”，有“[诗佛](https://baike.baidu.com/item/%E8%AF%97%E4%BD%9B/1227291?fromModule=lemma_inlink)”之称。其书画特臻其妙，后人推其为“南宗山水画之祖”。[苏轼](https://baike.baidu.com/item/%E8%8B%8F%E8%BD%BC/53906?fromModule=lemma_inlink)评价其曰：“味摩诘之诗，诗中有画；观摩诘之画，画中有诗。”存诗400余首，代表作有《[相思](https://baike.baidu.com/item/%E7%9B%B8%E6%80%9D/5611027?fromModule=lemma_inlink)》《[山居秋暝](https://baike.baidu.com/item/%E5%B1%B1%E5%B1%85%E7%A7%8B%E6%9A%9D/2794200?fromModule=lemma_inlink)》等。著有《[王右丞集](https://baike.baidu.com/item/%E7%8E%8B%E5%8F%B3%E4%B8%9E%E9%9B%86/5858619?fromModule=lemma_inlink)》《画学秘诀》等。
 
-![](assets/images/annually/2024/Pasted%20image%2020240404170040.png)
+![](assets/images/Pasted%20image%2020240404170040.png)
 
