PUSH NOTE : 20240429 《村居》高鼎 清.md

--- a/source/_posts/20240429 《村居》高鼎 清.md
+++ b/source/_posts/20240429 《村居》高鼎 清.md
@@ -8,7 +8,7 @@ categories:
   - 诗词歌赋
 share: "true"
 title: 《村居》高鼎 清
-date: 2024-07-20
+date: 2024-04-29
 ---
 
 村居
@@ -17,4 +17,15 @@ date: 2024-07-20
 草长莺飞二月天，拂堤杨柳醉春烟。
 儿童放学归来早，忙趁东风放纸鸢。
 
-![](assets/images/Pasted%20image%2020240429121104.png)
+**译文**  
+农历二月，青草渐渐发芽生长，黄莺飞来飞去，轻拂堤岸的杨柳陶醉在春天的雾气中。  
+村里的孩子们早早就放学回家，赶紧趁着东风把风筝放上蓝天。
+
+**注释**  
+村居：在乡村里居住时见到的景象。  
+拂堤杨柳：杨柳枝条很长，垂下来，微微摆动，像是在抚摸堤岸。  
+醉：迷醉，陶醉。  
+春烟：春天水泽、草木等蒸发出来的雾气。  
+散学：放学。  
+纸鸢：泛指风筝，它是一种纸做的形状像老鹰的风筝。鸢：老鹰。
+
