PUSH NOTE : 20240403 《鹿柴》王维 唐代.md

--- a/source/_posts/20240403 《鹿柴》王维 唐代.md
+++ b/source/_posts/20240403 《鹿柴》王维 唐代.md
@@ -10,20 +10,20 @@ share: "true"
 title: 《鹿柴》王维 唐代
 date: 2024-04-03
 ---
-《鹿柴》[^1]
+
+《鹿柴》
 [王维·唐代](2%20Aera/人物/古代/王维·唐代.md)
 
-空山不见人，但[^2]闻人语响。
-返景[^3]入深林，复[^4]照青苔上。
+空山不见人，但闻人语响。
+返景入深林，复照青苔上。
 
 **译文**  
 幽静的山谷里看不见人，只听到人说话的声音。  
 落日余光映入了深林，又照在幽暗处的青苔上。
 
+**注释**
 
-**注释**  
-
-[^1]: 鹿柴（zhài）：王维在辋川别业的胜景之一（在今陕西省蓝田县西南）。柴：通“寨”、“砦”，用树木围成的栅栏。  
-[^2]: 但：只。  
-[^3]: 返景（jǐng）：日光。一说“返景中景，同‘影’。意思是太阳将落时通过云彩反射的阳光”。  
-[^4]: 复：又。
+鹿柴（zhài）：王维在辋川别业的胜景之一（在今陕西省蓝田县西南）。柴：通“寨”、“砦”，用树木围成的栅栏。  
+但：只。  
+返景（jǐng）：日光。一说“返景中景，同‘影’。意思是太阳将落时通过云彩反射的阳光”。  
+复：又。
