PUSH NOTE : 苏轼·北宋.md

--- a/苏轼·北宋.md
+++ b/苏轼·北宋.md
@@ -12,5 +12,5 @@ categories:
 苏轼是北宋中期文坛领袖，在诗、词、文、书、画等方面取得很高成就。其诗题材广阔，清新豪健，善用夸张比喻，独具风格，与[黄庭坚](https://baike.baidu.com/item/%E9%BB%84%E5%BA%AD%E5%9D%9A/208277?fromModule=lemma_inlink)并称“[苏黄](https://baike.baidu.com/item/%E8%8B%8F%E9%BB%84/1302504?fromModule=lemma_inlink)”；其词开豪放一派，与[辛弃疾](https://baike.baidu.com/item/%E8%BE%9B%E5%BC%83%E7%96%BE/134859?fromModule=lemma_inlink)同是[豪放派](https://baike.baidu.com/item/%E8%B1%AA%E6%94%BE%E6%B4%BE/661798?fromModule=lemma_inlink)代表，并称“[苏辛](https://baike.baidu.com/item/%E8%8B%8F%E8%BE%9B/1288425?fromModule=lemma_inlink)”； 其文著述宏富，纵横恣肆，豪放自如，与[欧阳修](https://baike.baidu.com/item/%E6%AC%A7%E9%98%B3%E4%BF%AE/127825?fromModule=lemma_inlink)并称“欧苏”，与[韩愈](https://baike.baidu.com/item/%E9%9F%A9%E6%84%88/127407?fromModule=lemma_inlink)、[柳宗元](https://baike.baidu.com/item/%E6%9F%B3%E5%AE%97%E5%85%83/127462?fromModule=lemma_inlink)、欧阳修、苏洵、苏辙、[王安石](https://baike.baidu.com/item/%E7%8E%8B%E5%AE%89%E7%9F%B3/127359?fromModule=lemma_inlink)、[曾巩](https://baike.baidu.com/item/%E6%9B%BE%E5%B7%A9/210355?fromModule=lemma_inlink)合称“[唐宋八大家](https://baike.baidu.com/item/%E5%94%90%E5%AE%8B%E5%85%AB%E5%A4%A7%E5%AE%B6/136448?fromModule=lemma_inlink)”；善书法，与黄庭坚、[米芾](https://baike.baidu.com/item/%E7%B1%B3%E8%8A%BE/1255000?fromModule=lemma_inlink)、[蔡襄](https://baike.baidu.com/item/%E8%94%A1%E8%A5%84/491720?fromModule=lemma_inlink)合称“[宋四家](https://baike.baidu.com/item/%E5%AE%8B%E5%9B%9B%E5%AE%B6/191189?fromModule=lemma_inlink)”；擅长文人画，尤擅墨竹、怪石、枯木等。作品有《[东坡七集](https://baike.baidu.com/item/%E4%B8%9C%E5%9D%A1%E4%B8%83%E9%9B%86/202359?fromModule=lemma_inlink)》《[东坡易传](https://baike.baidu.com/item/%E4%B8%9C%E5%9D%A1%E6%98%93%E4%BC%A0/9462406?fromModule=lemma_inlink)》《[东坡乐府](https://baike.baidu.com/item/%E4%B8%9C%E5%9D%A1%E4%B9%90%E5%BA%9C/7690446?fromModule=lemma_inlink)》《[寒食帖](https://baike.baidu.com/item/%E5%AF%92%E9%A3%9F%E5%B8%96/28956?fromModule=lemma_inlink)》《[潇湘竹石图](https://baike.baidu.com/item/%E6%BD%87%E6%B9%98%E7%AB%B9%E7%9F%B3%E5%9B%BE/4444852?fromModule=lemma_inlink)》《[枯木怪石图](https://baike.baidu.com/item/%E6%9E%AF%E6%9C%A8%E6%80%AA%E7%9F%B3%E5%9B%BE/2879125?fromModule=lemma_inlink)》等。
 
 
-![](assets/images/annually/2024/Pasted%20image%2020240404172414.png)
+![](assets/images/Pasted%20image%2020240404172414.png)
 
