PUSH NOTE : 20240730 《增广贤文》.md

--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -7,7 +7,7 @@ categories:
   - 诗词歌赋
 share: "true"
 title: 《增广贤文》
-date: ""
+date: 2024-07-30
 comments: true
 description: 
 ---
@@ -38,17 +38,16 @@ description:
 饶人不是痴汉，痴汉不会饶人。
 是亲不似亲，非亲却似亲。
 美不美，故乡水；亲不亲，故乡人。
-莺花犹怕春光老，凯哥岂可教人枉度春？
+莺花犹怕春光老，岂可教人枉度春？
 相逢不饮空归去，洞口桃花也笑人。
 红粉佳人休使老，风流浪子莫教贫。
-在家不会以迎宾客，出门方知少主人。
+在家不会迎宾客，出门方知少主人。
 黄金无假，阿魏无真。
 客来主不顾，自是无良宾。
 良宾方不顾，应恐是痴人。
 贫居闹市无人问，富在深山有远亲。
-
-
-
+谁人背后无人说，哪个人前不说人？
+有钱道真语，无钱语不真。
 
 
 
