--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -24,9 +24,9 @@ description:
 易涨易退山溪水，易反易复小人心。
 运去金成铁，时来铁似金。
 读书须用意，一字值千金。
-逢人且说三分话，未可全抛一片心。
-有意栽花花不发，无心插柳柳成荫。
-画龙画虎难画骨，知人知面不知心。
+<u>逢人且说三分话，未可全抛一片心。</u>
+<u>有意栽花花不发，无心插柳柳成荫。</u>
+<u>画龙画虎难画骨，知人知面不知心。</u>
 钱财如粪土，仁义值千金。
 流水下滩非有意，白云出岫本无心。
 当时若不登高望，谁信东流海洋深？
@@ -48,18 +48,186 @@ description:
 贫居闹市无人问，富在深山有远亲。
 谁人背后无人说，哪个人前不说人？
 有钱道真语，无钱语不真。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+不信但看筵中酒，杯杯先劝有钱人。
+闹里挣钱，静处安身。
+来如风雨，去似微尘。
+长江后浪推前浪，世上新人攒旧人。
+近水楼台先得月，向阳花木先逢春。
+古人不见今时月，今月曾经照古人。
+先到为君，后到为臣。
+莫道君行早，更有早行人。
+莫信直中直，须防仁不仁。
+山中有直树，世上无直人。
+自恨枝无叶，莫怨太阳偏。
+一切都是命，半点不由人。
+<u>一年之计在于春，一日之计在于晨。</u>
+<u>一家之计在于和，一生之计在于勤。</u>
+<u>责人之心责己，恕己之心恕人。</u>
+守口如瓶，防意如城。
+宁可人负我，切莫我负人。
+再三须慎意，第一莫欺心。
+虎身犹可近，人毒不堪亲。
+来说是非者，便是是非人。
+远水难救近火，远亲不如近邻。
+有酒有肉多兄弟，急难何曾见一人？
+人情似纸张张薄，世事如棋局局新。
+山中也有千年树，世上难逢百岁人。
+力微休负重，言轻莫劝人。
+无钱休入众，遭难莫寻亲。
+平生不做皱眉事，世上应无切齿人。
+士者国之宝，儒为席上珍。
+若要断酒法，醒眼看醉人。
+求人须求大丈夫，济人须济急时无。
+久住令人贱，频来新也疏。
+酒中不语真君子，财上分明大丈夫。
+出家如初，成佛有余。
+积金千两，不如明解经书。
+养子不教如养驴，养女不教如养猪。
+有田不耕仓廪虚，有书不读子孙愚。
+仓廪虚兮岁月乏，子孙愚兮礼仪疏。
+听君一席话，胜读十年书。
+人不通今古，马牛如襟裾。
+茫茫四海人无数，哪个男儿是丈夫？
+白酒酿成缘好客，黄金散尽为收书。
+救人一命，胜造七级浮屠。
+城门失火，殃及池鱼。
+庭前生瑞草，好事不如无。
+欲求生富贵，须下死工夫。
+百年成之不足，一旦环之有余。
+人心似铁，官法如炉。
+善化不足，恶化有余。
+水至清则无鱼，人太急则无智。
+知者减半，愚者全无。
+在家由父，出嫁从夫。
+痴人畏妇，贤女敬夫。
+是非终日有，不听自然无。
+竹篱芧舍风光好，道院僧房终不如。
+宁可正而不足，不可邪而有余。
+宁可信其有，不可信其无。
+命里有时终须有，命里无时莫强求。
+道院迎仙客，书堂隐相儒。
+庭栽栖凤竹，池养化龙鱼。
+结交须胜己，似我不如无。
+但看三五日，相见不如初。
+人情似水分高下，世事如云任卷舒。
+会说说都是，不会说无理。
+磨刀恨不利，刀利伤人指；
+求财恨不多，财多害自己。
+知足常足，终身不辱。；
+知止常止，终身不耻。
+有福伤财，无福伤己。
+差之毫厘，失之千里。
+若登高必自卑，若涉远必自迩。
+三思而行，再思可矣。
+动口不如亲为，求人不如求己。
+小时是兄弟，长大各乡里。
+嫉财莫嫉食，怨生莫怨死。
+人见白头嗔，我见白头喜。
+多少水牛郞，不到白头死。
+墙有缝，壁有耳。
+好事不出门，坏事传千里。
+若要人不知，除非己莫为。
+为人不做亏心事，半夜敲门心不惊。
+贼是小人，智过君子。
+君子固穷，小人穷斯滥矣。
+富贵多忧，贫穷自在。
+不以我为德，反以我为仇。
+宁可直中取，不可曲中求。
+人无远虑，必有近忧。
+知我者谓我心忧，不知我者谓我何求？
+睛天不肯去，直待雨淋头。
+成事莫说，覆水难收。
+是非只为多开口，烦恼皆因强出头。
+忍得一时气，免得百日忧。
+近来学得乌龟法，得缩头时且缩头。
+惧法朝朝乐，欺公日日忧。
+人生一世，草长一春。
+黑发不知勤学早，转眼便是白羊翁。
+月过十五光明少，人到中年万事休。
+儿孙自有儿孙福，莫为儿孙做马牛。
+人生不满百，常怀千岁忧。
+今朝有酒今朝醉，明日愁来明日忧。
+路逢险处须回避，事到临头不自由。
+人贫不语，水平不流。
+一家养女百家求，一马不行百百忧。
+有花方酌酒，无月不登楼。
+三杯通大道，一醉解千愁。
+深山毕竟藏猛虎，大海终须纳细流。
+惜花须检点，爱月不梳头。
+大抵选她肌骨好，不搽红粉也风流。
+受恩深处宜先退，得意浓时反为仇。
+莫待是非来入耳，从前恩爱反为仇。
+休别有鱼处，莫恋浅滩头。
+去时终须去，再三留不住。
+忍一句，息一怒，饶不着，退一步。
+三十不豪，四十不富，五十将来寻死路。
+生不认魂，死不认尸。
+父母恩深终有别，夫妻义重也分离。
+人生似鸟同林宿，大难来时各自飞。
+人善被人欺，马善被人骑。
+人无横财不富，马无夜草不肥。
+人恶人怕天不怕，人善人欺天不欺。
+善恶到头终有报，只盼早到与来迟。
+黄河尚有澄清日，岂能人无得运时？
+得宠思辱，居安思危。
+念念有如临敌日，心心常似过桥时。
+英雄行险道，富贵似花枝。
+分公司莫道春光好，只怕秋来有冷时。
+送君千里，终有一别。
+但将冷眼观螃蟹，看它横行到几时！
+见事莫说，问事不知。
+闲事莫管，无事早归。
+假缎染就真红色，也被旁人说是非。
+善事可做，恶事莫为。
+许人一物，千金不移。
+龙生龙子，虎生虎儿。
+龙游浅水遭虾戏，虎落平原被犬欺。
+一举首登龙虎榜，十年身到凤凰池。
+十年寒窗无人问，一举成名天下知。
+酒债寻常处处有，人生七十古来稀！
+养儿防老，积谷防饥。
+鸡豚狗彘之畜，无失其时，数口之家，可以无饥矣。
+常将有日思无日，莫待无时当有时。
+树欲静而风不止，子欲养而亲不待。
+时来风送滕王阁，运去雷轰荐福碑。
+入门休问荣枯事，且看容颜便得知。
+官清司吏瘦，神灵庙主肥。
+息却雷霆之怒，罢却虎豹之威。威。
+饶人算知本，输人算知机。
+好言难得，恶语易施。
+一言既出，驷马难追。
+择其善者而从之，其不善者而改之。
+少壮不努力，老大徒伤悲。
+人有善愿，天必佑之。
+莫欺卯时酒，昏昏醉到酉。
+莫骂酉时妻，一夜受孤凄。
+种麻得麻，种豆得豆。
+天眼恢恢，疏而不漏。
+做官莫向前，作客莫向后。
+宁添一斗，莫添一口。
+螳螂捕蝉，岂知黄雀在后？
+不求金玉重重贵，但求儿孙个个贤。
+一日夫妻，百世姻缘。
+百世修来同船渡，千世修来共枕眠。
+杀人一万，自损三千。
+枯木逢春犹再发，人无两度再少年。
+未晚先投宿，鸡鸣早看天。
+将相场中堪走马，公侯肚内好撑船。
+富人思来年，穷人想眼前。
+世上若要人情好，赊去物品莫取钱。
+生死有命，富贵在天。
+击石原有火，不击乃无烟。
+人学始知道，不学亦徒然。
+莫笑他人老，终须还到老。
+但能守本分，终身无烦恼。
+善有善报，恶有恶报，不是不报，时候未到。
+人而无信，不须礼之。
+一人道好，千人传之。
+若要凡事好，须先问三老。
+君子爱财，取之有道。
+贞妇爱色，纳之以礼。
+年年防饥，夜夜防盗。
+学者是好，不学不好。
+学者如禾如稻，不学如草如蒿。
+遇饮酒时须防醉，得高歌处且高歌。
+因风吹火，用力不多。
