PUSH NOTE : 20240730 《增广贤文》.md

--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -67,10 +67,10 @@ description:
 宁可人负我，切莫我负人。
 再三须慎意，第一莫欺心。
 虎身犹可近，人毒不堪亲。
-来说是非者，便是是非人。
-远水难救近火，远亲不如近邻。
-有酒有肉多兄弟，急难何曾见一人？
-人情似纸张张薄，世事如棋局局新。
+**来说是非者，便是是非人。**
+**远水难救近火，远亲不如近邻。**
+**有酒有肉多兄弟，急难何曾见一人？**
+**人情似纸张张薄，世事如棋局局新。**
 山中也有千年树，世上难逢百岁人。
 力微休负重，言轻莫劝人。
 无钱休入众，遭难莫寻亲。
