PUSH NOTE : 20240730 《增广贤文》.md

--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -67,19 +67,19 @@ description:
 宁可人负我，切莫我负人。
 再三须慎意，第一莫欺心。
 虎身犹可近，人毒不堪亲。
-**来说是非者，便是是非人。**
-**远水难救近火，远亲不如近邻。**
-**有酒有肉多兄弟，急难何曾见一人？**
-**人情似纸张张薄，世事如棋局局新。**
+<u>来说是非者，便是是非人。</u>
+<u>远水难救近火，远亲不如近邻。</u>
+<u>有酒有肉多兄弟，急难何曾见一人？</u>
+<u>人情似纸张张薄，世事如棋局局新。</u>
 山中也有千年树，世上难逢百岁人。
-力微休负重，言轻莫劝人。
-无钱休入众，遭难莫寻亲。
+<u>力微休负重，言轻莫劝人。</u>
+<u>无钱休入众，遭难莫寻亲。</u>
 平生不做皱眉事，世上应无切齿人。
 士者国之宝，儒为席上珍。
 若要断酒法，醒眼看醉人。
 求人须求大丈夫，济人须济急时无。
-久住令人贱，频来新也疏。
-酒中不语真君子，财上分明大丈夫。
+<u>久住令人贱，频来新也疏。</u>
+<u>酒中不语真君子，财上分明大丈夫。</u>
 出家如初，成佛有余。
 积金千两，不如明解经书。
 养子不教如养驴，养女不教如养猪。
@@ -92,24 +92,24 @@ description:
 救人一命，胜造七级浮屠。
 城门失火，殃及池鱼。
 庭前生瑞草，好事不如无。
-欲求生富贵，须下死工夫。
-百年成之不足，一旦环之有余。
-人心似铁，官法如炉。
-善化不足，恶化有余。
-水至清则无鱼，人太急则无智。
+<u>欲求生富贵，须下死工夫。</u>
+<u>百年成之不足，一旦环之有余。</u>
+<u>人心似铁，官法如炉。</u>
+<u>善化不足，恶化有余。</u>
+<u>水至清则无鱼，人太急则无智。</u>
 知者减半，愚者全无。
 在家由父，出嫁从夫。
 痴人畏妇，贤女敬夫。
-是非终日有，不听自然无。
-竹篱芧舍风光好，道院僧房终不如。
-宁可正而不足，不可邪而有余。
-宁可信其有，不可信其无。
-命里有时终须有，命里无时莫强求。
+<u>是非终日有，不听自然无。</u>
+<u>竹篱芧舍风光好，道院僧房终不如。</u>
+<u>宁可正而不足，不可邪而有余。</u>
+<u>宁可信其有，不可信其无。</u>
+<u>命里有时终须有，命里无时莫强求。</u>
 道院迎仙客，书堂隐相儒。
 庭栽栖凤竹，池养化龙鱼。
-结交须胜己，似我不如无。
-但看三五日，相见不如初。
-人情似水分高下，世事如云任卷舒。
+<u>结交须胜己，似我不如无。</u>
+<u>但看三五日，相见不如初。</u>
+<u>人情似水分高下，世事如云任卷舒。</u>
 会说说都是，不会说无理。
 磨刀恨不利，刀利伤人指；
 求财恨不多，财多害自己。
@@ -137,8 +137,8 @@ description:
 知我者谓我心忧，不知我者谓我何求？
 睛天不肯去，直待雨淋头。
 成事莫说，覆水难收。
-是非只为多开口，烦恼皆因强出头。
-忍得一时气，免得百日忧。
+<u>是非只为多开口，烦恼皆因强出头。</u>
+<u>忍得一时气，免得百日忧。</u>
 近来学得乌龟法，得缩头时且缩头。
 惧法朝朝乐，欺公日日忧。
 人生一世，草长一春。
@@ -231,3 +231,103 @@ description:
 学者如禾如稻，不学如草如蒿。
 遇饮酒时须防醉，得高歌处且高歌。
 因风吹火，用力不多。
+不因渔夫引，怎能见波涛？
+无求到处人情好，不饮任他酒价高。
+知事少时烦恼少，识人多处是非多。
+进山不怕虎伤人，只怕人情两面刀。
+强中更有强中手，恶人须用恶人磨。
+会使不在家富豪，风流不用衣着佳。
+光阴似箭，日月如梭。
+天时不如地利，地利不好人和。
+黄金未为贵，安乐值钱多。
+世上万般皆下品，思量惟有读书高。
+世间好语书谈尽，天下名山僧占多。
+为善最乐，作恶难逃。
+好人相逢，恶人回避。
+羊有跪乳之恩，鸦有反哺之情。
+你急他不急，人闲心不闲。
+隐恶扬善，执其两端。
+妻贤夫祸少，子孝父心宽。
+已覆之水，收之实难。
+人生知足常乐，人老偷闲且闲。
+<u>处处绿杨堪系马，家家有路通长安。</u>
+见者易，学者难。
+厌静还思喧，嫌喧又忆山。
+自从心安后，无处不安然。
+莫将容易得，便作等闲看。
+用心计较般般错，退后思量事事宽。
+道路各别，养家一般。
+由俭入奢易，由奢入俭难。
+知音说与知音听，不是知音莫与谈。
+点石化为金，人心犹未足。
+<u>信了赌，卖了屋。</u>
+他人观花，不涉你目。
+他人碌碌，不涉你足。
+谁人不爱子孙贤，谁人不爱千钟粟。
+莫把真心空计较，五行不是这题目。
+书到用时方恨少，事非经过不知难。
+行事存德，莫问前程。
+河狭水紧，人急智生。
+明知山有虎，偏向虎山行。
+路不行不到，事不为不成。
+无钱方断酒，临老才读经。
+点塔七层，不如暗处一灯。
+<u>万事劝人休瞒眛，举着三尺有神明。</u>
+但存方寸地，留与子孙耕。
+灭却心头火，剔起佛前灯。
+惺惺多不足，蒙蒙作公卿。
+众星朗朗，不如孤月独明。
+兄弟相害，不如自生。
+合理可作，小利不争。
+牡丹花好空入目，枣花虽小结实多。
+欺老莫欺小，欺人心不明。
+勤奋耕锄收地利，他时饱䁔谢苍天。
+得忍且忍，得耐且耐，不忍不耐，小事成灾。
+相论逞英豪，家计渐渐退。
+贤妇令夫贵，恶妇令夫败。
+一人有庆，兆民厨赖。
+人老心未老，人穷计莫穷。
+人无千日好，花无百日红。
+黄蜂一口针，橘子两边分。
+世间通恨事，最毒淫妇心。
+杀人可恶，情理不容。
+乍富不知新受用，乍贫难改旧家风。
+座上客常满，杯中酒不空。
+屋漏又遭连夜雨，行船偏遇打头风。
+笋因落箨方成竹，鱼为奔波始化龙。
+记得少年骑竹马，转眼又是白羊翁。
+礼义生于富贵，盗贼出于贫穷。
+天上众星皆拱北，世间无水不朝东。
+士为知己者死，女为悦己者容。
+色即是空，空即是色。
+君子安贫，达人知命。
+良药苦口利于病，忠言逆耳利于行。
+顺天者昌，逆天者亡。
+有缘千里来相会，无缘对面不相逢。
+有福者昌，无福者亡。
+人为财死，鸟为食亡。
+夫妻相和好，琴瑟与笙簧。
+红粉易妆娇态女，无钱难作好儿郞。
+有子之人贫不久，无儿无女富不长。
+善必寿老，恶必早亡。
+<u>爽口食多偏作病，快心事过恐遭殃。</u>
+富贵定言要依分，贫穷不必枉思量。
+画水无风空作浪，绣花虽好不生香。
+贪他一斗米，失却半年粮。
+争他一脚豚，反失一只羊。
+龙归晚洞云犹湿，麝过春山草木香。
+人生只会量人短，何不回头把自量？
+见善如不及，见恶如探汤。
+人穷志短，马瘦毛长。
+自家心里急，他人未知忙。
+贫无达士将金赠，病有高人说药方。
+秋来满山多秀色，春来无处不花香。
+凡人不可貌相，海水不可斗量。
+清清之水，为土所防。
+济济之士，为酒所伤。
+蒿草之下，或有兰香。
+芧茨之屋，或有公王。
+无限朱门生饿殍，几多白屋出公卿。
+酒里乾坤大，壶中日月长。
+拂石坐来春衫冷，踏花归去马蹄香。
+万事前身定，浮生空自忙。
