PUSH NOTE : 20240730 《增广贤文》.md

--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -31,8 +31,7 @@ description:
 流水下滩非有意，白云出岫本无心。
 当时若不登高望，谁信东流海洋深？
 路遥知马力，日久见人心。
-两人一般心，无钱堪买金；
-一人一般心，有钱难买针。
+两人一般心，无钱堪买金；一人一般心，有钱难买针。
 想见易得好，久住难为人。
 马行无力皆因瘦，人不风流只为贫。
 饶人不是痴汉，痴汉不会饶人。
@@ -111,10 +110,8 @@ description:
 <u>但看三五日，相见不如初。</u>
 <u>人情似水分高下，世事如云任卷舒。</u>
 会说说都是，不会说无理。
-磨刀恨不利，刀利伤人指；
-求财恨不多，财多害自己。
-知足常足，终身不辱。；
-知止常止，终身不耻。
+磨刀恨不利，刀利伤人指；求财恨不多，财多害自己。
+知足常足，终身不辱；知止常止，终身不耻。
 有福伤财，无福伤己。
 差之毫厘，失之千里。
 若登高必自卑，若涉远必自迩。
@@ -272,7 +269,7 @@ description:
 路不行不到，事不为不成。
 无钱方断酒，临老才读经。
 点塔七层，不如暗处一灯。
-<u>万事劝人休瞒眛，举着三尺有神明。</u>
+<u>万事劝人休瞒眛，举头三尺有神明。</u>
 但存方寸地，留与子孙耕。
 灭却心头火，剔起佛前灯。
 惺惺多不足，蒙蒙作公卿。
@@ -331,3 +328,213 @@ description:
 酒里乾坤大，壶中日月长。
 拂石坐来春衫冷，踏花归去马蹄香。
 万事前身定，浮生空自忙。
+叫月子规喉舌冷，宿花蝴蝶梦魂香。
+一言不中，千言不用。
+一人传虚，百人传实。
+万金良药，不如无疾。
+世事如明镜，前程似暗漆。
+君子怀刑，小人怀惠。
+良田万倾，日食一升。
+大厦千间，日眠八尺。
+千经万典，孝义为先。
+天上人间，方便第一。
+一字入公门，九牛拔不出。
+衙门八字开，有理无钱别进来。
+欲求天下事，须用世间财。
+富从升合起，贫因不算来。
+近河不得枉使水，近山不得枉烧柴。
+家中无才子，官从何处来？
+慈不掌兵，义不掌财。
+一夫当关，万夫莫开。
+万事不由人计较，一生都是命安排。
+白云本是本是无心物，却被清风引出来。
+慢行急行，逆取顺取。
+命中只有如许财，丝毫不可有闪失。
+人间私语，天闻若雷。
+暗室亏心，神目如电。
+一毫之恶，劝人莫作。
+一毫之善，与人方便。
+亏人是祸，饶人是福，天眼恢恢，报应甚速。
+圣贤言语，神钦鬼伏。
+人各有心，心各有见。
+口说不如身逢，耳闻不如目见。
+见人富贵生欢喜，莫把心头似火烧。
+养兵千日，用在一时。
+国清才子贵，家富小儿娇。
+利刀割肉伤可愈，恶语伤人恨不消。
+公道世间唯白发，贵人头上不曾饶。
+有才堪出众，无衣懒出门。
+为官须作相，及第必争先。
+苗从地发，树向枝分。
+宅里燃火，烟气成云。
+以直抱怨，知恩报恩。
+红颜今日虽欺我，白发他时不放君。
+借问酒家何处有，牧童遥指杏花村。
+<u>父子和而家不退，兄弟和而家不分。</u>
+一片云间不相识，三千里外却逢君。
+官有正条，民有私约。
+争得猫儿，失却牛脚。
+愚者千虑，必有一得，智者千虑，必有一失。
+始吾于人也，听其言而信其行。
+今吾于人也，听其言而观其行。
+哪个梳头无乱发，情人眼里出西施。
+珠沉渊而川媚，玉韫石而山辉。
+夕阳无限好，只恐不多时。
+久旱逢甘霖，他乡遇故知；洞房花烛夜，金榜题名时。
+惜花春起早，爱月夜眠迟。
+掬水月在手，弄花香满衣。
+桃红李白蔷薇紫，问着东君总不知。
+国乱思良将，家贫思良妻。
+池塘积水防秋旱，田地深耕足养家。
+教子教孙须教义，栽桑栽柘少栽花。
+休念故乡生处好，受恩深处便为家。
+要深不怕树摇动，树正不愁月影斜。
+奉劝君子，各宜守己。
+只此呈示，万无一失。
+
+# 《增广贤文》（下集）
+
+ 前人俗语，言浅理深。
+ 补遗增广，集成书文。
+ 世上无难事，只怕不专心。
+ 成人不自在，自在不成人；金凭火炼方知色，与人交财便知心。
+ 乞丐无粮，懒惰而成。
+ 勤俭为无价之宝，节粮乃人妙之门。
+ 省事俭用，免得求人。
+ 量大祸不在，机深祸亦深。
+ 善为至宝深深用，心作良田世世耕。
+ 群居防口，独坐防心。
+ 体无病为富贵，身平安莫怨贫。
+ 败家子弟挥金如土，贫家子弟积土成金。
+ 富贵非关天地，福祸不是鬼神。
+ 安分贫一时，本分终不贫。
+ 不拜父母拜干亲，弟兄不和结外人。
+ 人过留名，雁过留声。
+ 择子莫择父，择亲莫择邻。
+ 爱妻之心是主，爱子之心是亲。
+ 事从根起，藕叶连心。
+ 祸与福同门，利与害同城。
+ 清酒红人脸，财帛动人心！
+ 宁可荤口念佛，不可素口骂人。
+ 有钱能说话，无钱话不灵。
+ 岂能尽如人意？但求不愧于心。
+ 不说自己井绳短，反说他人箍井深。
+ 恩爱多生病，无钱便觉贫。
+ 只学斟酒意，莫学下棋心。
+ 孝莫假意，转眼便为人父母。
+ 善休望报，回头只看汝儿孙！
+ 口开神气散，舌出是非生！
+ 弹琴费指甲，说话费精神。
+<u> 千贯买田，万贯结邻。</u>
+ 人言未必犹尽，听话只听三分。
+ 隔壁岂无耳，窗外岂无人？
+ 财可养生须注意，事不关己不劳心。
+ 酒不护贤，色不护病；财不护亲，气不护命！
+ 一日不可无常业，安闲便易起邪心！
+ 炎凉世态，富贵更甚于贫贱；嫉妒人心，骨肉更甚于外人！
+ 瓜熟蒂落，水到渠成。
+ 人情送匹马，买卖不饶针！
+ 过头饭好吃，过头话难听！
+ 事多累了自己，田多养了众人。
+ 怕事忍事不生事自然无事；
+ 平心静心不欺心何等放心！
+ 天子至尊不过于理，在理良心天下通行。
+ 好话不在多说，有理不在高声！
+一朝权在手，便把令来行。
+甘草味甜人可食，巧言妄语不可听。
+当场不论，过后枉然。
+贫莫与富斗，富莫与官争！
+官清难逃猾吏手，衙门少有念佛人！
+<u>家有千口，主事一人。</u>
+父子竭力山成玉，弟兄同心土变金。
+当事者迷，旁观者清。
+怪人不知理，知理不怪人。
+未富先富终不富，未贫先贫终不贫。
+少当少取，少输当赢！
+饱暖思淫欲，饥寒起盗心！
+蚊虫遭扇打，只因嘴伤人！
+布衣得暖真为福，千金平安即是春。
+<u>家贫出孝子，国乱显忠臣！</u>
+宁做太平犬，莫做离乱人！
+人有几等，官有几品。
+理不卫亲，法不为民。
+自重者然后人重，人轻者便是自轻。
+自身不谨，扰乱四邻。
+快意事过非快意，自古败名因败事。
+<u>伤身事莫做，伤心话莫说。</u>
+小人肥口，君子肥身。
+<u>地不生无名之辈，天不生无路之人。</u>
+一苗露水一苗草，一朝天子一朝臣。
+读未见书如逢良友，见已读书如逢故人。
+福满须防有祸，凶多料必无争。
+不怕三十而死，只怕死后无名。
+但知江湖者，都是薄命人。
+不怕方中打死人，只知方中无好人。
+说长说短，宁说人长莫说短；
+施恩施怨，宁施人恩莫施怨。
+育林养虎，虎大伤人。
+冤家抱头死，事要解交人。
+卷帘归乳燕，开扇出苍蝇。
+爱鼠常留饭，怜蛾灯罩纱。
+人命在天，物命在人。
+奸不通父母，贼不通地邻。
+盗贼多出赌博，人命常出奸情。
+治国信谗必杀忠臣，治家信馋必疏其亲。
+治国不用佞臣，治家不用佞妇。
+好臣一国之宝，好妇一家之珍。
+稳的不滚，滚的不稳。
+儿不嫌母丑，狗不嫌家贫。
+君子千钱不计较，小人一钱恼人心。
+人前显贵，闹里夺争。
+要知江湖深，一个不做声。
+知止自当出妄想，安贫须是禁奢心。
+初入行业，三年事成；
+初吃馒头，三年口生。
+家无生活计，坐吃如山崩。
+家有良田万顷，不如薄艺在身；
+艺多不养家，食多嚼不赢。
+命中只有八合米，走遍天下不满升。
+使心用心，反害自身。
+国家无空地，世上无闲人。
+妙药难医怨逆病，混财不富穷命人。
+耽误一年春，十年补不清；
+人能处处能，草能处处生。
+会打三班鼓，也要几个人。
+<u>人不走不亲，水不打不浑。</u>
+三贫三富不到老，十年兴败多少人！
+买货买得真，折本折得轻；
+不怕问到，只怕倒问。
+人强不如货强，价高不如口便。
+会买买怕人，会卖卖怕人。
+只只船上有梢公，天子足下有贫亲。
+既知莫望，不如莫问。
+在一行，练一行；
+穷莫失志，富莫癫狂。
+天欲令其灭亡，必先令其疯狂。
+梢长人胆大，梢短人心慌。
+隔行莫贪利，久炼必成钢。
+瓶花虽好艳，相看不耐长。
+早起三光，迟起三慌。
+未来休指望，过去莫思量；
+时来遇好友，病去遇良方。
+布得春风有夏雨，哈得秋风大家凉。
+晴带雨伞，饱带干粮。
+满壶全不响，半壶响叮当。
+久利之事莫为，众争之地莫往。
+老医迷旧疾，朽药误良方；
+该在水中死，不在岸止亡。
+舍财不如少取，施药不如传方。
+倒了城墙丑了县官，打了梅香丑了姑娘。
+燕子不进门，耗子不钻空仓。
+苍蝇不叮无缝的蛋，谣言不找谨慎的人。
+一人舍死，万人难当。
+人争一口气，佛争一柱香。
+门为小人而设，锁乃君子之防。
+舌咬只为揉，齿落皆因眶。
+硬弩弦先断，钢刀刃自伤。
+贼名难受，龟名难当。
+<u>好事他人未见讲，错处他偏说得长。</u>
+男子无志纯铁无钢，女子无志烂草无瓤。
+生男欲得成龙犹恐成獐，生女欲得到凤犹恐成虎。
+养男莫听狂言，养女莫叫离母。
+男子失教必愚顽，女子失教定粗鲁。
