--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -11,6 +11,7 @@ date: 2024-07-30
 comments: true
 description: 
 ---
+
 # 《增广贤文》（上集）
 
 昔时贤文，诲汝谆谆。
@@ -394,52 +395,52 @@ description:
 
 # 《增广贤文》（下集）
 
- 前人俗语，言浅理深。
- 补遗增广，集成书文。
- 世上无难事，只怕不专心。
- 成人不自在，自在不成人；金凭火炼方知色，与人交财便知心。
- 乞丐无粮，懒惰而成。
- 勤俭为无价之宝，节粮乃人妙之门。
- 省事俭用，免得求人。
- 量大祸不在，机深祸亦深。
- 善为至宝深深用，心作良田世世耕。
- 群居防口，独坐防心。
- 体无病为富贵，身平安莫怨贫。
- 败家子弟挥金如土，贫家子弟积土成金。
- 富贵非关天地，福祸不是鬼神。
- 安分贫一时，本分终不贫。
- 不拜父母拜干亲，弟兄不和结外人。
- 人过留名，雁过留声。
- 择子莫择父，择亲莫择邻。
- 爱妻之心是主，爱子之心是亲。
- 事从根起，藕叶连心。
- 祸与福同门，利与害同城。
- 清酒红人脸，财帛动人心！
- 宁可荤口念佛，不可素口骂人。
- 有钱能说话，无钱话不灵。
- 岂能尽如人意？但求不愧于心。
- 不说自己井绳短，反说他人箍井深。
- 恩爱多生病，无钱便觉贫。
- 只学斟酒意，莫学下棋心。
- 孝莫假意，转眼便为人父母。
- 善休望报，回头只看汝儿孙！
- 口开神气散，舌出是非生！
- 弹琴费指甲，说话费精神。
+前人俗语，言浅理深。
+补遗增广，集成书文。
+世上无难事，只怕不专心。
+成人不自在，自在不成人；金凭火炼方知色，与人交财便知心。
+乞丐无粮，懒惰而成。
+勤俭为无价之宝，节粮乃人妙之门。
+省事俭用，免得求人。
+量大祸不在，机深祸亦深。
+善为至宝深深用，心作良田世世耕。
+群居防口，独坐防心。
+体无病为富贵，身平安莫怨贫。
+败家子弟挥金如土，贫家子弟积土成金。
+富贵非关天地，福祸不是鬼神。
+安分贫一时，本分终不贫。
+不拜父母拜干亲，弟兄不和结外人。
+人过留名，雁过留声。
+择子莫择父，择亲莫择邻。
+爱妻之心是主，爱子之心是亲。
+事从根起，藕叶连心。
+祸与福同门，利与害同城。
+清酒红人脸，财帛动人心！
+宁可荤口念佛，不可素口骂人。
+有钱能说话，无钱话不灵。
+岂能尽如人意？但求不愧于心。
+不说自己井绳短，反说他人箍井深。
+恩爱多生病，无钱便觉贫。
+只学斟酒意，莫学下棋心。
+孝莫假意，转眼便为人父母。
+善休望报，回头只看汝儿孙！
+口开神气散，舌出是非生！
+弹琴费指甲，说话费精神。
 <u> 千贯买田，万贯结邻。</u>
- 人言未必犹尽，听话只听三分。
- 隔壁岂无耳，窗外岂无人？
- 财可养生须注意，事不关己不劳心。
- 酒不护贤，色不护病；财不护亲，气不护命！
- 一日不可无常业，安闲便易起邪心！
- 炎凉世态，富贵更甚于贫贱；嫉妒人心，骨肉更甚于外人！
- 瓜熟蒂落，水到渠成。
- 人情送匹马，买卖不饶针！
- 过头饭好吃，过头话难听！
- 事多累了自己，田多养了众人。
- 怕事忍事不生事自然无事；
- 平心静心不欺心何等放心！
- 天子至尊不过于理，在理良心天下通行。
- 好话不在多说，有理不在高声！
+人言未必犹尽，听话只听三分。
+隔壁岂无耳，窗外岂无人？
+财可养生须注意，事不关己不劳心。
+酒不护贤，色不护病；财不护亲，气不护命！
+一日不可无常业，安闲便易起邪心！
+炎凉世态，富贵更甚于贫贱；嫉妒人心，骨肉更甚于外人！
+瓜熟蒂落，水到渠成。
+人情送匹马，买卖不饶针！
+过头饭好吃，过头话难听！
+事多累了自己，田多养了众人。
+怕事忍事不生事自然无事；
+平心静心不欺心何等放心！
+天子至尊不过于理，在理良心天下通行。
+好话不在多说，有理不在高声！
 一朝权在手，便把令来行。
 甘草味甜人可食，巧言妄语不可听。
 当场不论，过后枉然。
@@ -538,3 +539,171 @@ description:
 生男欲得成龙犹恐成獐，生女欲得到凤犹恐成虎。
 养男莫听狂言，养女莫叫离母。
 男子失教必愚顽，女子失教定粗鲁。
+生男莫教弓与弩，生女莫教歌与舞。
+学成弓弩沙场灾，学成歌舞为人妾。
+财交者密，财尽者疏。
+婚姻论财，夫妻之道。
+色娇者亲，色衰者疏。
+少实胜虚，七不如拙。
+百战百胜不如无争，万言万中不如一默。
+有钱不置怨逆产，冤家宜解不宜结。
+近朱者赤，近墨者黑。
+一个山头一只虎，恶龙难斗地头蛇。
+出门看天色，进门看脸色。
+商贾买卖如施舍，买卖公平如积德。
+天生一人，地生一穴。
+<u>家无三年之积不成其家，国无九年之积不成其国。</u>
+男子有德便是才，女子无才便是德。
+有钱难买子孙贤，女儿不请上门客。
+男大当婚女大当嫁，不婚不嫁惹出笑话。
+谦虚美德，过谦即诈。
+自己跌倒自己爬，望人扶持都是假。
+人不知己过，牛不知力大。
+一家饱暖千家怨，一物不见赖千家。
+当面论人惹恨最大，是与不是随他说吧！
+谁人做得千年主，转眼流传八百家。
+满载芝麻都漏了，还在水里捞油花！
+皇帝坐北京，以理统天下。
+五百年前共一家，不同祖宗也同华！
+学堂大如官厅，人情大过王法。
+找钱犹如针挑土，用钱犹如水推沙！
+害人之心不可有，防人之心不可无！
+不愁无路，就怕不做。
+须向根头寻活计，莫向体面下功夫！
+祸从口出，病从口入。
+药补不如肉补，肉补不如养补。
+思虑之害甚于酒色，日日劳力上床呼疾。
+人怕不是福，人欺不是辱。
+能言不是真君子，善处方为大丈夫！
+为人莫犯法，犯法身无主。
+姊妹同肝胆，弟兄同骨肉。
+慈母多误子，悍妇必欺夫！
+君子千里同舟，小人隔墙易宿。
+文钱逼死英雄汉，财不归身恰以无。
+妻子如衣服，弟兄似手足。
+衣服补易新，手足断难续。
+盗贼怨失主，不孝怨父母。
+一时劝人以口，百世劝人以书。
+我不如人我无其福，人不如我我常知足！
+捡金不忘失金人，三两黄铜四两福。
+因祸得福，求赌必输。
+一言而让他人之祸，一忿而折平生之福。
+天有不测风云，人有旦夕祸福。
+不淫当斋，淡饱当肉。
+缓步当车，无祸当福。
+男无良友不知己之有过，女无明镜不知面这精粗。
+事非亲做，不知难处。
+十年易读举子，百年难淘江湖！
+积钱不如积德，闲坐不如看书。
+思量挑担苦，空手做做是福。
+时来易借银千两，运去难赊酒半壶。
+天晴打过雨落铺，少时享过老来福。
+与人方便自己方便，一家打墙两家好看。
+<u>当面留一线，过后好相见。</u>
+入门掠虎易，开口告人难。手指要往内撇，家丑不可外传。
+浪子出于祖无德，孝子出于前人贤。
+货离乡贵，人离乡贱。
+树挪死，人挪活。
+在家千日好，出门处处难。
+三员长者当官员，几个明人当知县？
+明人自断，愚人官断。
+<u>人怕三见面，树怕一墨线。</u>
+村夫硬似铁，光棍软如棉。
+不是撑船手，怎敢拿篙杆！
+天下礼仪无穷，一人知识有限。
+一人不得二人计，宋江难结万人缘。
+家有三亩田，不离衙门前，乡间无强汉，衙门就饿饭。
+人人依礼仪，天下不设官。
+衙门钱，眼睛钱；
+田禾钱，千万年。
+读书必读，不可做官。
+为人莫当官，当官皆一般。
+换了你我去，恐比他还贪。
+官吏清廉如修行，书差方便如行善。
+靠山吃山，种田吃田。
+吃尽美味还是盐，穿尽绫罗还是棉。
+一夫不耕，全家饿饭，一女不织，全家受寒。
+金银到手非容易，用时方知来时难。
+先讲断，后不乱，免得藕断丝不断。
+<u>听人劝，得一半。</u>
+不怕慢，只怕站。
+逢快莫赶，逢贱莫懒。
+谋事在人，成事在天！
+长路人挑担，短路人赚钱。
+宁卖现二，莫卖赊三。
+赚钱往前算，折本往后算。
+小小生意赚大钱，七十二行出状元。
+自己无运至，却怨世界难。
+胆大不如胆小，心宽甚如屋宽。
+妻贤何愁家不富，子孙何须受祖田。
+是儿不死，是财不散。
+财来生我易，我去生财难。
+十月滩头坐，一日下九滩。
+结交一人难上难，得罪一人一时间。
+借债经商，卖田还债；
+赊钱起屋，卖屋还钱。
+修起庙来鬼都老，拾得秤来姜卖完。
+不嫖莫转，不赌莫看。
+节食以去病，少食以延年。
+豆腐多了是包水，梢公多了打烂船。
+无口过易，无眼过难。
+无身过易，无心过难。
+不会凫水怨河宽，不会犁田怨枷担。
+他马莫骑，他弓莫挽。
+要知心腹事，但听口中言。
+宁在人前全不会，莫在人前会不全。
+是非亲见，切莫乱谈。
+<u>打人莫打脸，骂人莫骂短。</u>
+<u>好言一句三冬暖，话不投机六月寒。</u>
+人上十口难盘，帐上万元难还。
+放债如施，收债如讨。
+告状讨钱，海底摸盐。
+衙门深似海，弊病大如天。
+银钱莫欺骗，牛马不好变。
+好汉莫被人识破，看破不值半文钱。
+狗咬对头人，雷打三世冤。
+不卖香烧无剩钱，井水不打不满边。
+事宽则园，太久则偏。
+高人求低易，低人求高难。
+有钱就是男子汉，无钱就是汉子难。
+<u>人上一百，手艺齐全。</u>
+难者不会，会者不难。
+生就木头造就船，砍的没得车的圆。
+心不得满，事不得全。
+鸟飞不尽，话说不完。
+人无喜色，休开店，事不遂心莫怨天。
+选婿莫选田园，选女莫选嫁奁。
+<u>红颜女子多薄命，福人出在丑人边。</u>
+人将礼义为先，树将花果为园。
+临危许行善，过后心又变。
+天意违可以人回，命早定可以心挽。
+强盗口内出赦书，君子口中无戏言。
+贵人语少，贫子话多。
+快里须斟酌，耽误莫迟春。
+读过古华佗，不如见症多。
+东屋示补西屋破，前帐未还后又拖。
+今年又说明年富，待到明年差不多。
+志不同己，不必强合。
+莫道坐中安乐少，须知世上苦情多。
+本少利微强如坐，屋檐水也滴得多。
+勤俭持家富，谦恭受益多。
+细处不断粗处断，黄梅不落青梅落。
+见钱起意便是贼，顺手牵羊乃为盗。
+要做快活人，切莫寻烦恼。
+要做长寿人，莫做短命事。
+要做有后人，莫做无后事。
+不经一事，不长一智。
+宁可无钱使，不可无行止。
+<u>栽树要栽松柏，结交要结君子。</u>
+秀才不出门，能知天下事。
+钱多不经用，儿多不耐死。
+弟兄争财家不穷不止，妻妾争风夫不死不休。
+男人有志，女人有势。
+夫人死百将临门，将军死一卒不至。
+天旱误甲子，人穷误口齿。
+百岁无多日，光阴能几时？
+父母养其身，自己立其志。
+<u>待有余而济人，终无济人之日；</u>
+<u>待有闲而读书，终无读书之时。</u>
+此书传后世，句句必精读，其中礼和义，奉劝告世人。
+勤奋读，苦发奋，走遍天涯如游刃。
