PUSH NOTE : 20240730 《增广贤文》.md

--- a/source/_posts/20240730 《增广贤文》.md
+++ b/source/_posts/20240730 《增广贤文》.md
@@ -12,6 +12,11 @@ comments: true
 description: 
 ---
 
+| 日期       | 备注         |
+| ---------- | ------------ |
+| 2024-07-30 | 空闲时间手抄 |
+| 2024-08-01 | 第一遍成。   |
+
 # 《增广贤文》（上集）
 
 昔时贤文，诲汝谆谆。
