--- a/source/_posts/20240727 《三字经》.md
+++ b/source/_posts/20240727 《三字经》.md
@@ -12,7 +12,7 @@ comments: true
 description: 
 ---
 
-《人之初》
+《三字经》
 
 章炳麟·清
 
@@ -35,7 +35,7 @@ description:
 曰水火，木金土，此五行，本乎数。
 曰仁义，礼智信，此五常，不容紊。
 稻粱菽，麦黍稷，此六谷，人所食。
-马牛羊，鸡犬豕（shǐ），此六，人所饲。
+马牛羊，鸡犬豕（shǐ），此六畜，人所饲。
 曰喜怒，曰哀惧，爱恶欲，七情惧。
 匏土革，木金石，丝与竹，乃八音。
 高曾祖，父而身，身而子，子而孙。
@@ -45,18 +45,18 @@ description:
 此十义，人所同。凡训蒙，须讲究。
 详训诂，明句读。为学者，必有初。
 小学终，至四书。《论语》者，二十篇。群弟子，记善言。
-《孟子》者，七篇止，讲道德说仁义。
+《孟子》者，七篇止，讲道德，说仁义。
 作《中庸》，子思笔；中不偏，庸不易。
 作《大学》，乃曾子；自修齐，至平治。
 《孝经》通，四书熟，如六经，始可读。
 《诗》《书》《易》《礼》《春》《秋》，号六经，当讲求。
-有《连山》有《归藏》，有《周易》，三《易》详。
+有《连山》，有《归藏》，有《周易》，三《易》详。
 有典谟，有训诰，有誓命，《书》之奥。
 我周公，作《周礼》，著六官，存治体。
 大小戴，注《礼记》，述对言，礼乐备。
 曰《国风》，曰《雅》《颂》，号四诗，当讽咏。
 《诗》既亡，《春秋》作，寓褒贬，别善恶。
-三传者，有《公羊》，有《左氏》，有《穀梁》。
+三传者，有《公羊》，有《左氏》，有《穀（gǔ）梁》。
 经既明，方读子，撮（cuō）其要，记其事。
 五子者，有荀扬，文中子，及老庄。
 经子通，读诸史，考世系，知终始。
@@ -97,7 +97,7 @@ description:
 彼女子，且聪敏，尔男子，当自警。
 唐刘晏，方七岁，举神童，作正字。
 彼虽幼，身已仕，尔幼学，勉而致。
-有为者亦若是。犬守夜，司晨。
+有为者，亦若是。犬守夜，鸡司晨。
 荀不学，曷（hé）为人。蚕吐丝，蜂酿蜜。
 人不学，不如物。幼而学，壮而行。
 上致君，下泽民。扬名声，显父母。
