PUSH NOTE : 《大秦帝国》.md

--- a/source/_posts/《大秦帝国》.md
+++ b/source/_posts/《大秦帝国》.md
@@ -11,7 +11,7 @@ comments: true
 
 | 日期       | 备注                                       |
 | ---------- | ------------------------------------------ |
-| 2023-00-00 | 忘记是从哪天开始看了的，大概是 2023 年吧。 |
+| 2022       | 忘记是从哪天开始看了的，大概是 2022 年吧。 |
 | 2024-08-01 | 目前进度 90% 了，开始整理整理笔记。        |
 
 兵谚云："一将不良，窝死千军。"
@@ -26,28 +26,56 @@ comments: true
 
 皎皎者易污，峣峣者易折。
 
-箎：
+箎（chí）
+1. 同"箎"，古代一种竹制管乐器。形状像笛子。
 
-兕：
+兕（sì）
+1. 古代犀牛一类的兽名。一说雌性犀牛。皮厚，可制甲。
 
-訇：
+訇（hōng）
+1. 拟声词。形容很大的声音。
+2. 【阿訇】波斯语音译。指伊斯兰主持教仪、讲授经典的人。 
 
-轺：
+轺（yáo）
+1. 轺车，古代一种轻便的小车。
+2. 军车。
 
-谝：
+谝（piǎn）
+1. 欺骗；诈骗。
+2. 花言巧语。
+3. 夸耀；向别人显示。
 
-袂：
+袂（mèi）
+1. 衣袖。
 
-耒：
+耒（lěi）
+1. 古代农具，形状像木叉。
+2. 古代翻土农具耜上的曲柄。
 
-耜：
+耜（sì）
+1. 古代家具耒下端铲土的部分，
 
-隰：
+隰（xí）
+1. 地势低洼而潮湿的地方。
 
 商鞅变法时期，为了稳定西部戎狄，秦国采取了"三十年不变西族"的国策，与戎狄维持了一段井水不犯河水的岁月。
 
-啻：
+啻（chì）
+1. （书）副词。只：仅。
 
 大事赖独断而不赖众谋。
 
-鳏：
+鳏（guān）
+1. 无妻或丧妻的男子。
+
+畿（jī），国都附近的地区：京畿，畿辅。
+
+洫（xù）
+1. 田间水道。
+2. 泛指河渠。
+3. 护城河。
+
+罃（yīng）
+1. 古代盛灯油的壶。
+
+国让利于民，民忠心于国。
