PUSH NOTE : 《大秦帝国》.md

--- a/source/_posts/《大秦帝国》.md
+++ b/source/_posts/《大秦帝国》.md
@@ -79,3 +79,190 @@ comments: true
 1. 古代盛灯油的壶。
 
 国让利于民，民忠心于国。
+
+岘（xiàn）
+1. 岘山，山名。在湖北。又名岘首山。
+
+人之能，不仅在学，且在悟。悟之根本，不在少学，在难后重学。大难而有大悟，始得大成。
+
+蓍（shī）
+1. 蓍草。多年生草本植物。茎直立，花白色。全草可入药，也可制香料。古人用它的茎占卦。也叫锯齿草、蚰蜒草。
+
+燠（yù）
+1. 热；暖。
+
+唾（tuò）
+1. 口液；唾沫。
+2. 吐唾沫表示鄙弃。
+3. 吐。
+
+溘（kè）
+1. 忽然；突然。
+
+喟（kuì）
+1. 叹息。
+
+救苍生于万一，挽狂澜于既倒。
+
+桔（jú）槔（gāo）
+1. 桔槔俗称“吊杆”“称杆”，古代汉族农用工具。是一种原始的汲水工具。商代在农业灌溉方面，开始采用桔槔。
+
+涔（cén）
+1. 【涔涔】（雨、泪、血、汗等）不断流出或渗出。
+
+魈（xiāo）
+1. 【山魈】猕猴的一种。四肢粗壮，蓝脸红鼻。
+2. 传说中山里的独脚鬼怪。
+
+羸（léi）
+1. 瘦；弱。
+挽狂澜于既倒，救楚国于危亡，英雄气度
+
+满面风尘烟火色
+
+盲人骑瞎马，夜半临深池。
+
+出于苦难，成于板荡
+
+仁政井田不可复，孔孟毕生求之。六国旧制不可救，苏秦全力救之。事虽相异，其理同一。也孟为天下求一'仁'，苏秦为天下求一'公'也。
+
+粜（tiào）
+1. 卖粮食（跟"籴"相对）
+
+茬（chá）
+1. 庄稼收割后留在地里的茎和根。
+2. 指在同一块地里作物种植或生长的次数。
+3. 短而硬的胡须、头发。
+4. 泛指事物发生的次数。
+
+书不如思贵，意不可言传。说到底，是教人多思深思，切莫草草立言。
+
+人生有年
+
+冄（rǎn）
+1. 同"冉"，【冉冉】柔弱下垂的样子。
+2. 副词。慢慢地。
+
+名相起于州部，猛将发于卒伍？
+
+大道不和于俗，大功不谋于众。
+
+春风料峭的三月。
+
+这是《墨子》开宗明义第一篇，名曰《亲士》，说的是正才大道。老夫方才所念，大要三层：其一，为臣为子者，当以功业正道自立，而不能希图明君慈父垂怜自己，若是依靠垂怜赏赐而得高位，最终也将一无所得。其二，要成正道，便得寻觅依靠有锋芒的国士人才，虽然难以驾驭，然却是功业根基。其三最为要紧，说的是天地万物皆有瑕疵，并非总是昭昭荡荡，大水有阴沟，大火有烟瘴，王道有阴谋。身为冲要人物，既不能因诸般瑕疵而陷入宵小之道，唯以权术对国事；又不能如箭矢般笔直，磨刀石般平板。只有正道谋事，才能博大宏阔伸展自如，才能亲士成事。最后是一句警语：但为王者，其才能若不能施展于王城之外的治国大道，功业威望便不能覆盖邦国，立身立国便是空谈！
+
+义者，百事之始也，万利之本也，中智所不及也。
+
+战国四大公子者，信陵君魏无忌（魏国），孟尝君田文（齐国）、平原君赵胜（赵国）、春申君黄歇（楚国）也。四人当年与苏秦、张仪斡旋于合纵连横，从此成风支这士，天下呼为"四大公子"。
+
+立秋之日，最在的忌讳是雷、雨、风。中原三谚说的便是这三样禁忌。一云："立秋一雷，晚禾折半。"二云："雨打立秋，多涝不收。"三云："秋日一风，田土干底。"年年岁岁立秋日，朝野臣民盼的自是个风和日丽。
+
+强国之道无奇术，荒诞之谋不济邦。
+
+记住了："雪后冰凌道，只看草出雪，莫看土过冰。"
+
+**名家“二十一事”：**
+其一，卵有毛。
+其二，鸡三足。
+其三，郢有天下。
+其四，犬可以为羊。
+其五，马有卵。
+其七，火不热。
+其八，山出口。
+其九，轮不碾地。
+其十，目不见。
+十二，龟长于蛇。
+十三，矩不方，规不可以为圆。
+十四，凿不围枘。
+十五，飞鸟之影未尝动也。
+十六，镞矢之疾，而有不行不止之时。
+十七，狗非犬。
+十八，黄马骊牛三。
+十九，白狗黑。
+二十，孤驹未尝有母。
+二十一，一尺之椎，日取其半，万世不竭。
+
+
+路有诽谤木，朝有敢谏鼓。
+
+积微，月不胜日，时不胜月，岁不胜时。凡人好敖慢小事，大事至，然后兴之务之。如是，则常不胜夫敦比于小事者矣！何也？小事之至也数，其悬日也博，其为积也大。大事之至也希，其悬日也浅，其为积也小。
+故善日者王，善时者霸，补漏者危，大荒者亡！故，王者敬日，霸者敬时，仅存之国危而后戚之。亡国至亡而后知亡，至死而后知死，亡国之祸败，不可胜悔也。霸者之善著也，可以时托也。王者之功名，不可胜日志也。财物货宝以大为重，政教功名者反是，能积微者速成。诗曰：“德如毛，民鲜能克举之。”此之谓也。——《荀子》
+
+
+何为见识？发乎常人之不能见者，是谓见识。荀子的“积微速成”说，不是寻常的决事见识，而是一种方法之论，一种确立功业路径的法则之论。
+
+这便是秦国朝会的不成文的规矩，当某种主张只剩一个人坚持的时候，坚持者即或依然不服，也不再做反复论争；战时论事，大臣们都明白"事终有断"这个道理，诸多各有说法的大道理若无休止地争下去，任何一件事也做不成。
+
+后世史家对魏国灭亡的评论揣测很少，原因也在于魏国灭亡的必然性最确定，只有教训可以借鉴，没有秘密可资研究。《史记·魏世家》之后有四种评论，大约可说明这种简单明了。
+
+长期地缓贤忘士，而最终导致亡国。
+
+无论天意如何，失才便要亡国。越是竞争激烈的大争之世，这一结局的表现方式便越是酷烈。
+
+墨家的人才理论有三个基本点：
+第一是"亲士急贤"。
+第二是"众贤厚国"。
+第三是"尚贤乃为政之本"理念。
+墨子的人才理论，实在具有千古不朽的意义。
+
+帝国新官制的总体风貌，完全体现了李斯对始皇帝阐术的总纲：以郡县治为根基，以集权治为宗旨，以施政治民为侧重，以治权集中于中央为轴心。在此明白无误的总纲之下，帝国新官制从上到下建立了一个完整的施政体系。这一施政体系分为四级系统，层层辖制，从皇帝宫殿直到村畴乡野，一体纳入治道。
+其一，中央决策系统：皇帝系统。
+其二，中央政务系统：以丞相为轴心的三公九卿系统。三公是指：丞相、太尉、御史大夫。三公之下为九卿。九卿者，分别执掌九在领域之施政系统也。九卿在三公（主要在丞相）领导之下施政，以保不政出多门。九卿之中，五卿隶属皇帝系统，四卿隶属三公系统。三公这四卿为：廷尉（执法机构，设左监，右监，狱正三署，侧重受命于御史大夫府），治粟内史（以原大田令府扩大而设，掌经济民生诸事，隶属丞相系统），典客（以原行人署、属邦署合并扩大，掌邦交并边陲部族事务，隶属丞相府），少府（以原关市、邦司空等署合并扩大而设，掌国家赋税，设六丞，隶属丞相府）。
+其三，郡县施政系统：郡守县令为轴心的地方系统。
+其四，为乡官系统：最基层的三级民治——乡、亭、里。里，相当于后世的村。十里一亭，设亭长。十亭一乡，乡官，以三老为最尊。所谓三老，本指上寿（百二十岁）、中寿（百岁）、下寿（八十岁）三种老人。大致是八十岁上下的三位老人，执掌民风民俗教化。
+
+见事贵见缺，说说甚缺憾？
+
+箫何不过有心，记下了听到见到的每一笔帐而已。你若还想细究，萧何可以给你讲几千几百个血泪故事。
+
+使耕者有其田，民得以温饱也！
+
+飓风起于青萍之末。
+
+古谚云：庙堂如丝，其出如纶。
+
+儒家对待举发的“为大人隐，为亲友隐”的诸般教诲，竞相攀扯举发，一时人人无一事外。
+
+《性恶篇》中反复论证的六则立论：
+一则，人性本恶，无可变更；
+二则，善者虚伪，不可相信；
+三则，利益争夺，人之天性；
+四则，人有恶欲，天经地义；
+五则，圣人小人，皆有恶欲；
+六则，圣贤礼义，积伪欺世，效法必败。
+
+迅雷不及掩耳，飓风不及举步。
+
+念兹在兹。
+
+法治风暴的旋转轴心里，有一方法度无法制约的天地，这便是"成法立制，终决于人"的最高程式。
+
+王翦的持重寡言，蒙恬的勃勃生气，五贲的简约直率，尉缭的精明思虑，郑国的就事论事，胡毋敬的略显迂阔……无论这些大臣们朝会之风如何，都有一个相同处，惊人的坚韧，惊人的固执己见，非反复论争而不能达到同一。
+
+李斯此人以利为己为本，善变无情。
+
+始皇帝为政，非但确实有亘古未闻的大器局，且精于聚天下之众力以成事，更有铁志雄心，善激发，善用人，善决断等等人难以企及的天赋秉性与才具聚于一身，所以谋大事无一不成。
+
+善谋者未必成事，此之谓也。
+
+青史悠悠
+
+昔秦穆公人殉杀三良，罪黜百里奚，被天下呼为“缪”。秦昭王杀白起，楚平王杀伍奢，吴王夫差杀伍子胥，此四者，皆天下大失也！
+政谚云：用道治者不杀无罪，而罚不加于无辜。
+
+蒙恬的意义，在于他是中国文明史上的一个突出标志。只有秦帝国的劳改大军，在长达千余年对匈奴作战中真正做到了摧枯拉朽，真正做到了秋风扫落叶，真正做到了苍鹰扑群雀。西汉盐铁会议之文献《盐铁论·伐功》篇云："蒙公为秦击走匈奴，若鸷鸟追群雀。匈奴势慑，不敢南面而望十余年。"
+
+华夏民族在强势生存传统中自古便有"兴亡大事不问卜"的理念，武王伐纣而姜太公踩啐占卜龟甲，乃典型例证也。
+
+帝国创制，秦帝国之中央执法系统为五大机构：
+其一，延尉府职司勘审定罪，几类后世法院；
+其二，御史大夫职司举发监察弹劾等，几类后世检察院；
+其三，法官署职司宣法，几类后世司法局；
+其四，内史府职司京师治安捕盗并缉拿罪犯，几类后世公安机构；
+其五，宗正府执掌对皇族之执法权，是执法机构中最为特异的一个。
+
+眚（shěng）
+1. 眼睛长白翳。
+2. 灾异。
+3. 过失。
+
