PUSH NOTE : 《大秦帝国》.md

--- a/source/_posts/《大秦帝国》.md
+++ b/source/_posts/《大秦帝国》.md
@@ -9,10 +9,10 @@ date: 2024-08-01
 comments: true
 ---
 
-| 日期       | 备注                                       |
-| ---------- | ------------------------------------------ |
+| 日期         | 备注                       |
+| ---------- | ------------------------ |
 | 2022       | 忘记是从哪天开始看了的，大概是 2022 年吧。 |
-| 2024-08-01 | 目前进度 90% 了，开始整理整理笔记。        |
+| 2024-08-01 | 开始整理整理笔记。                |
 
 兵谚云："一将不良，窝死千军。"
 
@@ -261,8 +261,35 @@ comments: true
 其四，内史府职司京师治安捕盗并缉拿罪犯，几类后世公安机构；
 其五，宗正府执掌对皇族之执法权，是执法机构中最为特异的一个。
 
+牝（pìn）
+1. 雌性的（跟“牡”相对）。
+
+
 眚（shěng）
 1. 眼睛长白翳。
 2. 灾异。
 3. 过失。
+
+
+粲（càn）
+1. 鲜亮的样子。
+
+霜重雾浓寒风飕飕
+
+商鞅有言，大事不赖众谋。
+
+
+“项羽为人，剽悍猾贼！项羽尝攻襄城，襄城无遗类，皆坑之！诸所过之处，无不残灭！”剽者，抢动之强盗也；悍者，凶暴蛮横也；猾者，狡诈乱世也；贼者，虐害天下也，邪恶不走正道也。
+
+始皇帝统一六国后，建造了十二座大型仓廪囤积天下粮草，并制定了专门法令——《仓律》实施治理，仓情分外整肃。这十二仓是：内史郡的霸上仓、内史郡的栎阳仓、内史郡的咸阳仓、三川郡的敖仓、砀郡的陈留仓、琅邪郡的琅邪仓、胶东郡的黄仓、临淄郡的腄仓、九原郡的北河仓、蜀郡的成都仓、南阳郡的宛仓、东郡的督道仓。十二仓中以敖仓规模最大，堪称秦帝国的国家粮食中心。
+
+龃龉（jǔ yǔ）
+1. 上下牙齿对不齐，比喻意见不合，互相抵触。
+
+缘木求鱼
+
+以韩非《说难》，说君的轴心法则便是“非其人勿与语”——不是明君雄主，便不要与之谈论为政大道。
+
+侔（móu）
+1. 等同。
 
