PUSH NOTE : 1. 防御式设计：参数检查.md

--- a/source/_posts/1. 防御式设计：参数检查.md
+++ b/source/_posts/1. 防御式设计：参数检查.md
@@ -5,8 +5,8 @@ tags:
   - blog
 share: "true"
 categories:
-  - essay
-title: 参数检查：防御式设计
+  - 系统优化
+title: 防御式设计：参数检查
 date: 2024-08-06,15:04
 comments: true
 ---
@@ -14,11 +14,13 @@ comments: true
 ## 防御式设计：参数检查
 
 **业务场景：**
+
 在日常开发中，尤其是在 web 应用开发中，我们经常需要对数据的合法性进行验证。为了实现这一目的，我们通常会对参数进行一些前置验证。这些验证规则可以包括必填项、范围、格式、正则表达式、安全性以及自定义规则等。
 
 通常，为简化业务逻辑，我们会借助一些第三方工具来进行这些通用性的检测。
 
 **案例 1：**
+
 如果是基于 pb 协议，可以启用 [protoc-gen-validate (PGV) ](https://github.com/bufbuild/protoc-gen-validate) 自动化数据校验插件。配置规则如：
 ![](assets/images/Pasted%20image%2020240206162835.png)
 数据保存数据库之前，为防止溢出，一般对其长度做检查。强校验 `speaker_id` 字段长度在 1 ～ 100 个字符：
@@ -28,6 +30,7 @@ string speaker_id = 1 [(validate.rules).string = {min_len: 1, max_len: 100 }];
 ```
 
 **案例 2：**
+
 对于非 pb 定义的结构，也有一些类似的组件实现自动化校验。如 [Go Struct and Field validation](https://github.com/go-playground/validator) ，基本用法如下：
 
 ```go
@@ -46,4 +49,5 @@ type User struct {
 > 如果预置的 `valadator` 不满足需求，也可以自定义 `validator`。
 
 **谚云：防御不到位，上线跑断腿**
+
 防御式设计是考虑使用者可能会错误使用的情况，从设计上避免错误使用，或是降低错误使用的机会。防御性设计可以让软件更安全、可靠，更方便地找到使用者的错误。
