PUSH NOTE : 2. 批量思想：解决 N+1 问题.md

--- a/source/_posts/2. 批量思想：解决 N+1 问题.md
+++ b/source/_posts/2. 批量思想：解决 N+1 问题.md
@@ -20,8 +20,8 @@ comments: true
 在业务初期下游没有批量的接口，同时单次需要查询的记录很少（最多可能就两三个）。于是，在一个循环内多次调用。美滋滋，五分钟搞定，问题不大能跑起来了。
 随着业务的发展，查询 id 越来越多（甚至有几十个），接口耗时部题可想而知，长尾越来越多 `^_^`
 
-> 得益于采用 [1. 防御式设计：参数检查](1%20Project/腾讯/智影/浅析服务端优化/智影：浅析后端接口优化实战（20240331）/1.%20防御式设计：参数检查.md) 限制了 id 的最大个数，使得情况不至于糟糕到不可控。
-> 所以，参数检查有大用。
+> 得益于采用 [1. 防御性设计：参数检查](1%20Project/腾讯/智影/浅析服务端优化/智影：浅析后端接口优化实战（20240331）/1.%20防御性设计：参数检查.md) 限制了 id 的最大个数，使得情况不至于糟糕到不可控。
+> 防御性设计还是大有用处滴～
 
 **案例 1：**
 
