PUSH NOTE : 1. 防御性设计：参数检查.md

--- a/source/_posts/1. 防御性设计：参数检查.md
+++ b/source/_posts/1. 防御性设计：参数检查.md
@@ -23,11 +23,13 @@ comments: true
 
 如果是基于 pb 协议，可以启用 [protoc-gen-validate (PGV) ](https://github.com/bufbuild/protoc-gen-validate) 自动化数据校验插件。配置规则如：
 ![](assets/images/Pasted%20image%2020240206162835.png)
-数据保存数据库之前，为防止溢出，一般对其长度做检查。强校验 `speaker_id` 字段长度在 1 ～ 100 个字符：
+强校验 `title` 字段长度在 1 ～ 100 个字符：
 
 ```protobuf
-string speaker_id = 1 [(validate.rules).string = {min_len: 1, max_len: 100 }];
+string title = 1 [(validate.rules).string = {min_len: 1, max_len: 100 }];
 ```
+
+> 一般地，保存数据库之前，为防止溢出，可对其长度做前置检查。
 
 **案例 2：**
 
