PUSH NOTE : 2. 批量思想：解决 N+1 问题.md

--- a/source/_posts/2. 批量思想：解决 N+1 问题.md
+++ b/source/_posts/2. 批量思想：解决 N+1 问题.md
@@ -17,11 +17,9 @@ comments: true
 
 **业务场景：**
 
-在业务初期下游没有批量的接口，同时单次需要查询的记录很少（最多可能就两三个）。于是，在一个循环内多次调用。美滋滋，五分钟搞定，问题不大能跑起来了。
-随着业务的发展，查询 id 越来越多（甚至有几十个），接口耗时部题可想而知，长尾越来越多 `^_^`
+在一个循环内多次执行 `RPC` 调用或者数据库操作。数据量小的时候问题不大，能跑起来。
 
-> 得益于采用 [1. 防御性设计：参数检查](1%20Project/腾讯/智影/浅析服务端优化/智影：浅析后端接口优化实战（20240331）/1.%20防御性设计：参数检查.md) 限制了 id 的最大个数，使得情况不至于糟糕到不可控。
-> 防御性设计还是大有用处滴～
+随着业务的发展，数据量越来越大，或者要查询的 `id` 越来越多（特别是未加限制的时候），耗时部题可想而知，长尾会越来越多。
 
 **案例 1：**
 
@@ -34,7 +32,9 @@ for _, id := range ids {
 }
 ```
 
-**解决方案：改批量（一次从存储中取出所有 id 的结果）**
+**解决方案：**
+
+改批量（一次从存储中取出所有 id 的结果）
 
 ```go
 records := GetDetails(ids)
