--- a/source/_posts/3. 异步思想：解决长耗时的问题.md
+++ b/source/_posts/3. 异步思想：解决长耗时的问题.md
@@ -23,13 +23,15 @@ comments: true
 
 **案例 1：**
 
-以[文本配音（TTS）](https://kf.zenvideo.qq.com/help/doc?id=dcccf9045b50dca3)为例，【合成声音】和【编辑声音】这两个子过程耗耗时比较长。我们可以把耗时长的部分封装到一个异步任务中，并生成一个任务 ID，后续可以查询处理进度和结果。
+以[文本配音（TTS）](https://kf.zenvideo.qq.com/help/doc?id=dcccf9045b50dca3)为例，【合成音频】和【添加音效】这两个子过程耗耗时比较长：
+
+![](assets/images/8f6ddfe0832db6b1d7ea0f9e76ddeb77_MD5.png)
+
+我们可以把耗时长的部分封装到一个异步任务中，并生成一个任务 ID，后续可以查询处理进度和结果。
 
 音频生成部分改为异步任务是因为该子过程是文本配音的关键路径（主流程、耗时长），对非关键路径如【数据埋点】直接改为协程处理即可：
 
-![](assets/images/864f476c0f863eb5f651ff080dc30a76_MD5.png)
-
-异步思想是一种解决长耗时问题的方法，它通过将耗时的操作放在后台进行，不阻塞主线程或其他任务的执行，从而提高系统的响应性能和并发处理能力。
+![](assets/images/d4a2d43f6bff5383e547c2366f5240ff_MD5.png)
 
 **案例 2：**
 
