PUSH NOTE : 4. 并行思想：提升处理效率.md

--- a/source/_posts/4. 并行思想：提升处理效率.md
+++ b/source/_posts/4. 并行思想：提升处理效率.md
@@ -149,7 +149,7 @@ BenchmarkTracksAsSrtBatch-10 10 100319896 ns/op 226600 B/op 2026 allocs/op
 
 **谚云：人多力量大**
 
-在现代操作系统中，我们可以很方便地编写出多进程的程序。在多进程程序中，如果多个进程之间需要协作完成任务，那么进程间通信的方式就是需要重点考虑的事项之一。这种通信方式叫作 IPC（Inter- Process Communication）。
+在现代操作系统中，我们可以很方便地编写出多进程的程序。多进程间的通信是需要重点考虑的事项之一，这种通信方式叫作 IPC（Inter- Process Communication）。
 
 在 Linux 操作系统中可以使用的 IPC 方法有很多种。从处理机制的角度看，它们可以分为：
 
