PUSH NOTE : 《枫桥夜泊》张继 唐.md

--- a/source/_posts/《枫桥夜泊》张继 唐.md
+++ b/source/_posts/《枫桥夜泊》张继 唐.md
@@ -1,5 +1,4 @@
 ---
-uuid: 92bfa965-4bdb-11ef-aa31-6763f8fd0a83
 tags:
   - 随笔
   - note
@@ -8,10 +7,11 @@ tags:
 categories:
   - 诗词歌赋
 share: "true"
-title: 《枫桥夜泊》张继 唐
+title: 《枫桥夜泊》张继·唐
 date: 2024-04-29
 ---
-枫桥夜泊
+
+《枫桥夜泊》
 [张继·唐代](2%20Aera/人物/古代/张继·唐代.md)
 
 月落乌啼霜满天，江枫渔火对愁眠。
