PUSH NOTE : 0. 前言.md

--- a/source/_posts/0. 前言.md
+++ b/source/_posts/0. 前言.md
@@ -11,6 +11,8 @@ date: 2024-08-06
 comments: true
 ---
 
+![](assets/images/0d75eb6ae4c9774e40bea34839daadfb_MD5.webp)
+
 ## 写在前面
 
 性能优化是软件项目开发过程中的一个永恒话题。
