--- a/source/_posts/20160910 - linux-查看磁盘空间.md
+++ b/source/_posts/20160910 - linux-查看磁盘空间.md
@@ -8,9 +8,11 @@ categories:
 comments: true
 description: ubuntu 查看磁盘空间
 date: 2016-09-10 15:35:24
+share: "true"
 ---
 
 # df
+
 ## 查看磁盘空间
 
 ```
@@ -20,7 +22,7 @@ Filesystem                          Size   Used  Avail Capacity  iused   ifree %
 localhost:/Zp5mvtzEO2n01q          112Gi  112Gi    0Bi   100%        0       0  100%   /Volumes/MobileBackups
 ```
 
-## 查看文件夹空间 
+## 查看文件夹空间
 
 ```
 ➜  du -sh
@@ -56,18 +58,8 @@ localhost:/Zp5mvtzEO2n01q          112Gi  112Gi    0Bi   100%        0       0  
 4.0K	19585960.tar.gz
 ```
 
-
-
-
-
-
 ---
-<link rel="stylesheet" href="http://yandex.st/highlightjs/6.1/styles/default.min.css">
-<script src="http://yandex.st/highlightjs/6.1/highlight.min.js"></script>
-<script>
-hljs.tabReplace = ' ';
-hljs.initHighlightingOnLoad();
-</script>
 
+> 来源：[http://leunggeorge.github.io/](http://leunggeorge.github.io/)
 
-来源：[http://leunggeorge.github.io/](http://leunggeorge.github.io/)
+![blog-footer](assets/images/common/blog-footer.png)
